@@ -20,14 +20,15 @@ import static org.apache.commons.io.file.PathUtils.deleteDirectory;
 import static org.apache.solr.bench.BaseBenchState.log;
 
 import com.codahale.metrics.Meter;
-import java.io.File;
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
+import java.io.OutputStream;
+import java.io.PrintStream;
 import java.lang.management.ManagementFactory;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.SplittableRandom;
@@ -35,9 +36,8 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import org.apache.commons.io.output.NullPrintStream;
-import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
+import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.Http2SolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.QueryRequest;
@@ -58,20 +58,13 @@ import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.infra.BenchmarkParams;
 import org.openjdk.jmh.infra.Control;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /** The base class for Solr JMH benchmarks that operate against a {@code MiniSolrCloudCluster}. */
 public class MiniClusterState {
 
-  /** The constant DEBUG_OUTPUT. */
-  public static final boolean DEBUG_OUTPUT = false;
-
   /** The constant PROC_COUNT. */
   public static final int PROC_COUNT =
       ManagementFactory.getOperatingSystemMXBean().getAvailableProcessors();
-
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   /** The type Mini cluster bench state. */
   @State(Scope.Benchmark)
@@ -83,11 +76,13 @@ public class MiniClusterState {
     /** The Nodes. */
     public List<String> nodes;
 
+    public String zkHost;
+
     /** The Cluster. */
     MiniSolrCloudCluster cluster;
 
     /** The Client. */
-    public SolrClient client;
+    public Http2SolrClient client;
 
     /** The Run cnt. */
     int runCnt = 0;
@@ -113,6 +108,8 @@ public class MiniClusterState {
     private SplittableRandom random;
     private String workDir;
 
+    private boolean useHttp1 = Boolean.getBoolean("solr.http1");
+
     /**
      * Tear down.
      *
@@ -124,7 +121,7 @@ public class MiniClusterState {
 
       // dump Solr metrics
       Path metricsResults =
-          Paths.get(
+          Path.of(
               workDir,
               "metrics-results",
               benchmarkParams.id(),
@@ -132,8 +129,7 @@ public class MiniClusterState {
               benchmarkParams.getBenchmark() + ".txt");
       Files.createDirectories(metricsResults.getParent());
 
-      cluster.dumpMetrics(
-          metricsResults.getParent().toFile(), metricsResults.getFileName().toString());
+      cluster.dumpMetrics(metricsResults.getParent(), metricsResults.getFileName().toString());
     }
 
     /**
@@ -156,14 +152,36 @@ public class MiniClusterState {
     @TearDown(Level.Trial)
     public void shutdownMiniCluster(BenchmarkParams benchmarkParams, BaseBenchState baseBenchState)
         throws Exception {
-
-      log.info("MiniClusterState tear down - baseBenchState is {}", baseBenchState);
-
       BaseBenchState.dumpHeap(benchmarkParams);
 
-      if (DEBUG_OUTPUT) log("closing client and shutting down minicluster");
       IOUtils.closeQuietly(client);
       cluster.shutdown();
+      logClusterDirectorySize();
+    }
+
+    private void logClusterDirectorySize() throws IOException {
+      log("");
+      Files.list(miniClusterBaseDir.toAbsolutePath())
+          .forEach(
+              (node) -> {
+                try {
+                  long clusterSize =
+                      Files.walk(node)
+                          .filter(Files::isRegularFile)
+                          .mapToLong(
+                              file -> {
+                                try {
+                                  return Files.size(file);
+                                } catch (IOException e) {
+                                  throw new RuntimeException(e);
+                                }
+                              })
+                          .sum();
+                  log("mini cluster node size (bytes) " + node + " " + clusterSize);
+                } catch (IOException e) {
+                  throw new RuntimeException(e);
+                }
+              });
     }
 
     /**
@@ -184,8 +202,7 @@ public class MiniClusterState {
 
       workDir = System.getProperty("workBaseDir", "build/work");
 
-      log("");
-      Path currentRelativePath = Paths.get("");
+      Path currentRelativePath = Path.of("");
       String s = currentRelativePath.toAbsolutePath().toString();
       log("current relative path is: " + s);
       log("work path is: " + workDir);
@@ -208,13 +225,13 @@ public class MiniClusterState {
       String baseDirSysProp = System.getProperty("miniClusterBaseDir");
       if (baseDirSysProp != null) {
         deleteMiniCluster = false;
-        miniClusterBaseDir = Paths.get(baseDirSysProp);
+        miniClusterBaseDir = Path.of(baseDirSysProp);
         if (Files.exists(miniClusterBaseDir)) {
           createCollectionAndIndex = false;
           allowClusterReuse = true;
         }
       } else {
-        miniClusterBaseDir = Paths.get(workDir, "mini-cluster");
+        miniClusterBaseDir = Path.of(workDir, "mini-cluster");
       }
 
       System.setProperty("metricsEnabled", String.valueOf(metricsEnabled));
@@ -254,7 +271,7 @@ public class MiniClusterState {
         cluster =
             new MiniSolrCloudCluster.Builder(nodeCount, miniClusterBaseDir)
                 .formatZkServer(false)
-                .addConfig("conf", getFile("src/resources/configs/cloud-minimal/conf").toPath())
+                .addConfig("conf", getFile("src/resources/configs/cloud-minimal/conf"))
                 .configure();
       } catch (Exception e) {
         if (Files.exists(miniClusterBaseDir)) {
@@ -272,8 +289,9 @@ public class MiniClusterState {
       for (JettySolrRunner runner : jetties) {
         nodes.add(runner.getBaseUrl().toString());
       }
+      zkHost = cluster.getZkServer().getZkAddress();
 
-      client = new Http2SolrClient.Builder().build();
+      client = new Http2SolrClient.Builder(nodes.get(0)).useHttp1_1(useHttp1).build();
 
       log("done starting mini cluster");
       log("");
@@ -303,9 +321,8 @@ public class MiniClusterState {
 
           CollectionAdminRequest.Create request =
               CollectionAdminRequest.createCollection(collection, "conf", numShards, numReplicas);
-          request.setBasePath(nodes.get(random.nextInt(cluster.getJettySolrRunners().size())));
-
-          client.request(request);
+          client.requestWithBaseUrl(
+              nodes.get(random.nextInt(cluster.getJettySolrRunners().size())), null, request);
 
           cluster.waitForActiveCollection(
               collection, 15, TimeUnit.SECONDS, numShards, numShards * numReplicas);
@@ -318,6 +335,20 @@ public class MiniClusterState {
       }
     }
 
+    /** Setting useHttp1 to true will make the {@link #client} use http1 */
+    public void setUseHttp1(boolean useHttp1) {
+      if (client != null) {
+        throw new IllegalStateException(
+            "You can only change this setting before starting the Mini Cluster");
+      }
+      this.useHttp1 = useHttp1;
+    }
+
+    @SuppressForbidden(reason = "This module does not need to deal with logging context")
+    public void index(String collection, Docs docs, int docCount) throws Exception {
+      index(collection, docs, docCount, true);
+    }
+
     /**
      * Index.
      *
@@ -326,87 +357,119 @@ public class MiniClusterState {
      * @param docCount the doc count
      * @throws Exception the exception
      */
-    @SuppressForbidden(reason = "This module does not need to deal with logging context")
-    public void index(String collection, Docs docs, int docCount) throws Exception {
+    public void index(String collection, Docs docs, int docCount, boolean parallel)
+        throws Exception {
       if (createCollectionAndIndex) {
-
         log("indexing data for benchmark...");
-        Meter meter = new Meter();
-        ExecutorService executorService =
-            Executors.newFixedThreadPool(
-                Runtime.getRuntime().availableProcessors(),
-                new SolrNamedThreadFactory("SolrJMH Indexer"));
-        ScheduledExecutorService scheduledExecutor =
-            Executors.newSingleThreadScheduledExecutor(
-                new SolrNamedThreadFactory("SolrJMH Indexer Progress"));
-        scheduledExecutor.scheduleAtFixedRate(
-            () -> {
-              if (meter.getCount() == docCount) {
-                scheduledExecutor.shutdown();
-              } else {
-                log(meter.getCount() + " docs at " + meter.getMeanRate() + " doc/s");
-              }
-            },
-            10,
-            10,
-            TimeUnit.SECONDS);
-        for (int i = 0; i < docCount; i++) {
-          executorService.submit(
-              new Runnable() {
-                final SplittableRandom threadRandom = random.split();
-
-                @Override
-                public void run() {
-                  UpdateRequest updateRequest = new UpdateRequest();
-                  updateRequest.setBasePath(
-                      nodes.get(threadRandom.nextInt(cluster.getJettySolrRunners().size())));
-                  SolrInputDocument doc = docs.inputDocument();
-                  // log("add doc " + doc);
-                  updateRequest.add(doc);
-                  meter.mark();
-
-                  try {
-                    client.request(updateRequest, collection);
-                  } catch (Exception e) {
-                    throw new RuntimeException(e);
-                  }
-                }
-              });
+        if (parallel) {
+          indexParallel(collection, docs, docCount);
+        } else {
+          indexBatch(collection, docs, docCount, 10000);
         }
-
-        log("done adding docs, waiting for executor to terminate...");
-
-        executorService.shutdown();
-        boolean result = false;
-        while (!result) {
-          result = executorService.awaitTermination(600, TimeUnit.MINUTES);
-        }
-
-        scheduledExecutor.shutdown();
-
         log("done indexing data for benchmark");
 
         log("committing data ...");
         UpdateRequest commitRequest = new UpdateRequest();
-        commitRequest.setBasePath(nodes.get(random.nextInt(cluster.getJettySolrRunners().size())));
+        final var url = nodes.get(random.nextInt(cluster.getJettySolrRunners().size()));
         commitRequest.setAction(UpdateRequest.ACTION.COMMIT, false, true);
-        commitRequest.process(client, collection);
+        client.requestWithBaseUrl(url, collection, commitRequest);
         log("done committing data");
       } else {
         cluster.waitForActiveCollection(collection, 15, TimeUnit.SECONDS);
       }
 
       QueryRequest queryRequest = new QueryRequest(new SolrQuery("q", "*:*", "rows", "1"));
-      queryRequest.setBasePath(nodes.get(random.nextInt(cluster.getJettySolrRunners().size())));
+      final var url = nodes.get(random.nextInt(cluster.getJettySolrRunners().size()));
+      NamedList<Object> result =
+          client.requestWithBaseUrl(url, collection, queryRequest).getResponse();
 
-      NamedList<Object> result = client.request(queryRequest, collection);
-
-      if (DEBUG_OUTPUT) log("result: " + result);
-
+      log("sanity check of single row query result: " + result);
       log("");
 
       log("Dump Core Info");
       dumpCoreInfo();
+    }
+
+    @SuppressForbidden(reason = "This module does not need to deal with logging context")
+    private void indexParallel(String collection, Docs docs, int docCount)
+        throws InterruptedException {
+      Meter meter = new Meter();
+      ExecutorService executorService =
+          Executors.newFixedThreadPool(
+              Runtime.getRuntime().availableProcessors(),
+              new SolrNamedThreadFactory("SolrJMH Indexer"));
+      ScheduledExecutorService scheduledExecutor =
+          Executors.newSingleThreadScheduledExecutor(
+              new SolrNamedThreadFactory("SolrJMH Indexer Progress"));
+      scheduledExecutor.scheduleAtFixedRate(
+          () -> {
+            if (meter.getCount() == docCount) {
+              scheduledExecutor.shutdown();
+            } else {
+              log(meter.getCount() + " docs at " + meter.getMeanRate() + " doc/s");
+            }
+          },
+          10,
+          10,
+          TimeUnit.SECONDS);
+      for (int i = 0; i < docCount; i++) {
+        executorService.execute(
+            new Runnable() {
+              final SplittableRandom threadRandom = random.split();
+
+              @Override
+              public void run() {
+                UpdateRequest updateRequest = new UpdateRequest();
+                final var url =
+                    nodes.get(threadRandom.nextInt(cluster.getJettySolrRunners().size()));
+                SolrInputDocument doc = docs.inputDocument();
+                // log("add doc " + doc);
+                updateRequest.add(doc);
+                meter.mark();
+
+                try {
+                  client.requestWithBaseUrl(url, collection, updateRequest);
+                } catch (Exception e) {
+                  throw new RuntimeException(e);
+                }
+              }
+            });
+      }
+
+      log("done adding docs, waiting for executor to terminate...");
+
+      executorService.shutdown();
+      boolean result = false;
+      while (!result) {
+        result = executorService.awaitTermination(600, TimeUnit.MINUTES);
+      }
+
+      scheduledExecutor.shutdown();
+    }
+
+    private void indexBatch(String collection, Docs docs, int docCount, int batchSize)
+        throws SolrServerException, IOException {
+      Meter meter = new Meter();
+      List<SolrInputDocument> batch = new ArrayList<>(batchSize);
+      for (int i = 1; i <= docCount; i++) {
+        batch.add(docs.inputDocument());
+        if (i % batchSize == 0) {
+          UpdateRequest updateRequest = new UpdateRequest();
+          updateRequest.add(batch);
+          client.requestWithBaseUrl(nodes.get(0), collection, updateRequest);
+          meter.mark(batch.size());
+          batch.clear();
+          log(meter.getCount() + " docs at " + (long) meter.getMeanRate() + " doc/s");
+        }
+      }
+      if (!batch.isEmpty()) {
+        UpdateRequest updateRequest = new UpdateRequest();
+        updateRequest.add(batch);
+        client.requestWithBaseUrl(nodes.get(0), collection, updateRequest);
+        meter.mark(batch.size());
+        batch = null;
+      }
+      log(meter.getCount() + " docs at " + (long) meter.getMeanRate() + " doc/s");
     }
 
     /**
@@ -438,10 +501,9 @@ public class MiniClusterState {
         }
 
         UpdateRequest optimizeRequest = new UpdateRequest();
-        optimizeRequest.setBasePath(
-            nodes.get(random.nextInt(cluster.getJettySolrRunners().size())));
+        final var url = nodes.get(random.nextInt(cluster.getJettySolrRunners().size()));
         optimizeRequest.setAction(UpdateRequest.ACTION.OPTIMIZE, false, true, maxMergeSegments);
-        optimizeRequest.process(client, collection);
+        client.requestWithBaseUrl(url, collection, optimizeRequest);
       }
     }
 
@@ -452,7 +514,10 @@ public class MiniClusterState {
      */
     @SuppressForbidden(reason = "JMH uses std out for user output")
     public void dumpCoreInfo() throws IOException {
-      cluster.dumpCoreInfo(!BaseBenchState.QUIET_LOG ? System.out : new NullPrintStream());
+      cluster.dumpCoreInfo(
+          !BaseBenchState.QUIET_LOG
+              ? System.out
+              : new PrintStream(OutputStream.nullOutputStream(), false, StandardCharsets.UTF_8));
     }
   }
 
@@ -490,12 +555,14 @@ public class MiniClusterState {
    * @param name the name
    * @return the file
    */
-  public static File getFile(String name) {
+  public static Path getFile(String name) {
     final URL url =
-        MiniClusterState.class.getClassLoader().getResource(name.replace(File.separatorChar, '/'));
+        MiniClusterState.class
+            .getClassLoader()
+            .getResource(name.replace(FileSystems.getDefault().getSeparator(), "/"));
     if (url != null) {
       try {
-        return new File(url.toURI());
+        return Path.of(url.toURI());
       } catch (Exception e) {
         throw new RuntimeException(
             "Resource was found on classpath, but cannot be resolved to a "
@@ -503,12 +570,12 @@ public class MiniClusterState {
                 + name);
       }
     }
-    File file = new File(name);
-    if (file.exists()) {
+    Path file = Path.of(name);
+    if (Files.exists(file)) {
       return file;
     } else {
-      file = new File("../../../", name);
-      if (file.exists()) {
+      file = Path.of("../../../", name);
+      if (Files.exists(file)) {
         return file;
       }
     }
@@ -516,6 +583,6 @@ public class MiniClusterState {
         "Cannot find resource in classpath or in file-system (relative to CWD): "
             + name
             + " CWD="
-            + Paths.get("").toAbsolutePath());
+            + Path.of("").toAbsolutePath());
   }
 }
