@@ -17,18 +17,21 @@
 package org.apache.solr.cloud;
 
 import static java.util.Arrays.asList;
-import static org.apache.solr.common.cloud.ZkStateReader.COLLECTION_DEF;
 import static org.apache.solr.common.cloud.ZkStateReader.NRT_REPLICAS;
 import static org.apache.solr.common.cloud.ZkStateReader.NUM_SHARDS_PROP;
 import static org.apache.solr.common.params.CollectionAdminParams.COLLECTION;
 import static org.apache.solr.common.params.CollectionAdminParams.DEFAULTS;
+import static org.hamcrest.Matchers.emptyString;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
 
-import com.google.common.collect.ImmutableList;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -37,14 +40,17 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
 import org.apache.lucene.tests.util.TestUtil;
+import org.apache.lucene.util.Version;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
+import org.apache.solr.client.solrj.SolrResponse;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
+import org.apache.solr.client.solrj.request.CollectionsApi;
 import org.apache.solr.client.solrj.request.CoreAdminRequest;
-import org.apache.solr.client.solrj.request.CoreStatus;
 import org.apache.solr.client.solrj.request.V2Request;
 import org.apache.solr.client.solrj.response.CollectionAdminResponse;
 import org.apache.solr.client.solrj.response.CoreAdminResponse;
@@ -93,7 +99,6 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     String collectionName = getSaferTestName();
     CollectionAdminResponse response =
         CollectionAdminRequest.createCollection(collectionName, 2, 2)
-            .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
             .process(cluster.getSolrClient());
 
     cluster.waitForActiveCollection(collectionName, 2, 4);
@@ -125,115 +130,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expected " + collectionName + " to disappear from cluster state",
         collectionName,
-        (n, c) -> c == null);
-  }
-
-  @Test
-  public void testCreateCollWithDefaultClusterPropertiesOldFormat() throws Exception {
-    String COLL_NAME = "CollWithDefaultClusterProperties";
-    try {
-      V2Response rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
-              .withPayload(
-                  "{set-obj-property:{collectionDefaults:{numShards : 2 , nrtReplicas : 2}}}")
-              .build()
-              .process(cluster.getSolrClient());
-
-      for (int i = 0; i < 300; i++) {
-        Map<?, ?> m = cluster.getZkStateReader().getClusterProperty(COLLECTION_DEF, null);
-        if (m != null) break;
-        Thread.sleep(10);
-      }
-      Object clusterProperty =
-          cluster
-              .getZkStateReader()
-              .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NUM_SHARDS_PROP), null);
-      assertEquals("2", String.valueOf(clusterProperty));
-      clusterProperty =
-          cluster
-              .getZkStateReader()
-              .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NRT_REPLICAS), null);
-      assertEquals("2", String.valueOf(clusterProperty));
-      CollectionAdminResponse response =
-          CollectionAdminRequest.createCollection(COLL_NAME, "conf", null, null, null, null)
-              .process(cluster.getSolrClient());
-      assertEquals(0, response.getStatus());
-      assertTrue(response.isSuccess());
-
-      cluster.waitForActiveCollection(COLL_NAME, 2, 4);
-
-      DocCollection coll = cluster.getSolrClient().getClusterState().getCollection(COLL_NAME);
-      Map<String, Slice> slices = coll.getSlicesMap();
-      assertEquals(2, slices.size());
-      for (Slice slice : slices.values()) {
-        assertEquals(2, slice.getReplicas().size());
-      }
-      CollectionAdminRequest.deleteCollection(COLL_NAME).process(cluster.getSolrClient());
-
-      // unset only a single value using old format
-      rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
-              .withPayload(
-                  "{\n"
-                      + "  \"set-obj-property\": {\n"
-                      + "    \"collectionDefaults\": {\n"
-                      + "      \"nrtReplicas\": null\n"
-                      + "    }\n"
-                      + "  }\n"
-                      + "}")
-              .build()
-              .process(cluster.getSolrClient());
-      // assert that it is really gone in both old and new paths
-      // we use a timeout so that the change made in ZK is reflected in the watched copy inside
-      // ZkStateReader
-      TimeOut timeOut = new TimeOut(5, TimeUnit.SECONDS, new TimeSource.NanoTimeSource());
-      while (!timeOut.hasTimedOut()) {
-        clusterProperty =
-            cluster
-                .getZkStateReader()
-                .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NRT_REPLICAS), null);
-        if (clusterProperty == null) break;
-      }
-      assertNull(clusterProperty);
-      clusterProperty =
-          cluster
-              .getZkStateReader()
-              .getClusterProperty(ImmutableList.of(COLLECTION_DEF, NRT_REPLICAS), null);
-      assertNull(clusterProperty);
-
-      // delete all defaults the old way
-      rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
-              .withPayload("{set-obj-property:{collectionDefaults:null}}")
-              .build()
-              .process(cluster.getSolrClient());
-      // assert that it is really gone in both old and new paths
-      timeOut = new TimeOut(5, TimeUnit.SECONDS, new TimeSource.NanoTimeSource());
-      while (!timeOut.hasTimedOut()) {
-        clusterProperty =
-            cluster
-                .getZkStateReader()
-                .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NUM_SHARDS_PROP), null);
-        if (clusterProperty == null) break;
-      }
-      assertNull(clusterProperty);
-      clusterProperty =
-          cluster
-              .getZkStateReader()
-              .getClusterProperty(ImmutableList.of(COLLECTION_DEF, NUM_SHARDS_PROP), null);
-      assertNull(clusterProperty);
-    } finally {
-      // clean up in case there was an exception during the test
-      V2Response rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
-              .withPayload("{set-obj-property:{collectionDefaults: null}}")
-              .build()
-              .process(cluster.getSolrClient());
-    }
+        Objects::isNull);
   }
 
   @Test
@@ -241,31 +138,30 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     String COLL_NAME = "CollWithDefaultClusterProperties";
     try {
       V2Response rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
+          new V2Request.Builder("/cluster/properties")
+              .withMethod(SolrRequest.METHOD.PUT)
               .withPayload(
-                  "{set-obj-property:{defaults : {collection:{numShards : 2 , nrtReplicas : 2}}}}")
+                  "{\"defaults\": {\"collection\": {\"numShards\": 2, \"nrtReplicas\": 2}}}")
               .build()
               .process(cluster.getSolrClient());
 
       for (int i = 0; i < 300; i++) {
-        Map<?, ?> m = cluster.getZkStateReader().getClusterProperty(COLLECTION_DEF, null);
+        Map<?, ?> m = cluster.getZkStateReader().getClusterProperty(DEFAULTS, null);
         if (m != null) break;
         Thread.sleep(10);
       }
       Object clusterProperty =
           cluster
               .getZkStateReader()
-              .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NUM_SHARDS_PROP), null);
+              .getClusterProperty(List.of(DEFAULTS, COLLECTION, NUM_SHARDS_PROP), null);
       assertEquals("2", String.valueOf(clusterProperty));
       clusterProperty =
           cluster
               .getZkStateReader()
-              .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NRT_REPLICAS), null);
+              .getClusterProperty(List.of(DEFAULTS, COLLECTION, NRT_REPLICAS), null);
       assertEquals("2", String.valueOf(clusterProperty));
       CollectionAdminResponse response =
           CollectionAdminRequest.createCollection(COLL_NAME, "conf", null, null, null, null)
-              .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
               .process(cluster.getSolrClient());
       assertEquals(0, response.getStatus());
       assertTrue(response.isSuccess());
@@ -281,15 +177,13 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
 
       // unset only a single value
       rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
+          new V2Request.Builder("/cluster/properties")
+              .withMethod(SolrRequest.METHOD.PUT)
               .withPayload(
                   "{\n"
-                      + "  \"set-obj-property\": {\n"
-                      + "    \"defaults\" : {\n"
-                      + "      \"collection\": {\n"
-                      + "        \"nrtReplicas\": null\n"
-                      + "      }\n"
+                      + "  \"defaults\" : {\n"
+                      + "    \"collection\": {\n"
+                      + "      \"nrtReplicas\": null\n"
                       + "    }\n"
                       + "  }\n"
                       + "}")
@@ -302,15 +196,15 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
         clusterProperty =
             cluster
                 .getZkStateReader()
-                .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NRT_REPLICAS), null);
+                .getClusterProperty(List.of(DEFAULTS, COLLECTION, NRT_REPLICAS), null);
         if (clusterProperty == null) break;
       }
       assertNull(clusterProperty);
 
       rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
-              .withPayload("{set-obj-property:{defaults: {collection:null}}}")
+          new V2Request.Builder("/cluster/properties")
+              .withMethod(SolrRequest.METHOD.PUT)
+              .withPayload("{\"defaults\": {\"collection\": null}}")
               .build()
               .process(cluster.getSolrClient());
       // assert that it is really gone in both old and new paths
@@ -319,20 +213,15 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
         clusterProperty =
             cluster
                 .getZkStateReader()
-                .getClusterProperty(ImmutableList.of(DEFAULTS, COLLECTION, NUM_SHARDS_PROP), null);
+                .getClusterProperty(List.of(DEFAULTS, COLLECTION, NUM_SHARDS_PROP), null);
         if (clusterProperty == null) break;
       }
       assertNull(clusterProperty);
-      clusterProperty =
-          cluster
-              .getZkStateReader()
-              .getClusterProperty(ImmutableList.of(COLLECTION_DEF, NUM_SHARDS_PROP), null);
-      assertNull(clusterProperty);
     } finally {
       V2Response rsp =
-          new V2Request.Builder("/cluster")
-              .withMethod(SolrRequest.METHOD.POST)
-              .withPayload("{set-obj-property:{defaults: null}}")
+          new V2Request.Builder("/cluster/properties")
+              .withMethod(SolrRequest.METHOD.PUT)
+              .withPayload("{\"defaults\": null}")
               .build()
               .process(cluster.getSolrClient());
     }
@@ -369,7 +258,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expected " + collectionName + " to disappear from cluster state",
         collectionName,
-        (n, c) -> c == null);
+        Objects::isNull);
 
     // Test Creating a new collection.
     collectionName = "solrj_test2";
@@ -383,7 +272,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expected " + collectionName + " to appear in cluster state",
         collectionName,
-        (n, c) -> c != null);
+        Objects::nonNull);
   }
 
   @Test
@@ -437,13 +326,10 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     assertEquals(0, response.getStatus());
     assertTrue(response.isSuccess());
 
-    cluster
-        .getZkStateReader()
-        .waitForState(
-            collectionName,
-            30,
-            TimeUnit.SECONDS,
-            (l, c) -> c != null && c.getSlice("shardC") != null);
+    waitForState(
+        "Wait for shard to be visible",
+        collectionName,
+        c -> c != null && c.getSlice("shardC") != null);
     coresStatus = response.getCollectionCoresStatus();
     assertEquals(3, coresStatus.size());
     int replicaTlog = 0;
@@ -474,7 +360,6 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
 
     final String collection = "aliasedCollection";
     CollectionAdminRequest.createCollection(collection, "conf", 1, 1)
-        .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
         .process(cluster.getSolrClient());
 
     CollectionAdminResponse response =
@@ -490,7 +375,6 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
   public void testSplitShard() throws Exception {
     String collectionName = getSaferTestName();
     CollectionAdminRequest.createCollection(collectionName, "conf", 2, 1)
-        .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
         .process(cluster.getSolrClient());
 
     cluster.waitForActiveCollection(collectionName, 2, 2);
@@ -534,9 +418,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     assertTrue(response.isSuccess());
 
     waitForState(
-        "Expected 5 slices to be active",
-        collectionName,
-        (n, c) -> c.getActiveSlices().size() == 5);
+        "Expected 5 slices to be active", collectionName, c -> c.getActiveSlices().size() == 5);
   }
 
   @Test
@@ -550,7 +432,6 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
 
     CollectionAdminResponse response =
         CollectionAdminRequest.createCollection(collectionName, "conf", 1, 1)
-            .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
             .withProperty(CoreAdminParams.DATA_DIR, dataDir.toString())
             .withProperty(CoreAdminParams.ULOG_DIR, ulogDir.toString())
             .process(cluster.getSolrClient());
@@ -566,16 +447,15 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     DocCollection testCollection = getCollectionState(collectionName);
 
     Replica replica1 = testCollection.getReplicas().iterator().next();
-    CoreStatus coreStatus = getCoreStatus(replica1);
+    final var coreStatus = getCoreStatus(replica1);
 
-    assertEquals(Paths.get(coreStatus.getDataDirectory()).toString(), dataDir.toString());
+    assertEquals(Path.of(coreStatus.dataDir).toString(), dataDir.toString());
   }
 
   @Test
   public void testAddAndDeleteReplica() throws Exception {
     String collectionName = getSaferTestName();
     CollectionAdminRequest.createCollection(collectionName, "conf", 1, 2)
-        .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
         .process(cluster.getSolrClient());
 
     cluster.waitForActiveCollection(collectionName, 1, 2);
@@ -606,7 +486,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expected replica " + newReplica.getName() + " to vanish from cluster state",
         collectionName,
-        (n, c) -> c.getSlice("shard1").getReplica(newReplica.getName()) == null);
+        c -> c.getSlice("shard1").getReplica(newReplica.getName()) == null);
   }
 
   private Replica grabNewReplica(CollectionAdminResponse response, DocCollection docCollection) {
@@ -659,7 +539,6 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     final String propName = "testProperty";
 
     CollectionAdminRequest.createCollection(collectionName, "conf", 2, 2)
-        .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
         .process(cluster.getSolrClient());
 
     cluster.waitForActiveCollection(collectionName, 2, 4);
@@ -690,17 +569,9 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     fail("Timed out waiting for cluster property value");
   }
 
-  @Test
-  public void testColStatus() throws Exception {
-    String collectionName = getSaferTestName();
-    CollectionAdminRequest.createCollection(collectionName, "conf2", 2, 2)
-        .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
-        .process(cluster.getSolrClient());
-
-    cluster.waitForActiveCollection(collectionName, 2, 4);
-
+  private void indexSomeDocs(String collectionName) throws SolrServerException, IOException {
     SolrClient client = cluster.getSolrClient();
-    byte[] binData = collectionName.getBytes("UTF-8");
+    byte[] binData = collectionName.getBytes(StandardCharsets.UTF_8);
     // index some docs
     for (int i = 0; i < 10; i++) {
       SolrInputDocument doc = new SolrInputDocument();
@@ -724,13 +595,97 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
       client.add(collectionName, doc);
     }
     client.commit(collectionName);
+  }
 
+  private void assertRspPathNull(SolrResponse rsp, String... pathSegments) {
+    assertNull(Utils.getObjectByPath(rsp.getResponse(), false, Arrays.asList(pathSegments)));
+  }
+
+  private void assertRspPathNotNull(SolrResponse rsp, String... pathSegments) {
+    assertNotNull(Utils.getObjectByPath(rsp.getResponse(), false, Arrays.asList(pathSegments)));
+  }
+
+  @Test
+  @SuppressWarnings("unchecked")
+  public void testColStatus() throws Exception {
+    String collectionName = getSaferTestName();
+    CollectionAdminRequest.createCollection(collectionName, "conf2", 2, 2)
+        .process(cluster.getSolrClient());
+
+    cluster.waitForActiveCollection(collectionName, 2, 4);
+    indexSomeDocs(collectionName);
+
+    // Returns basic info if no additional flags are set
     CollectionAdminRequest.ColStatus req = CollectionAdminRequest.collectionStatus(collectionName);
+    CollectionAdminResponse rsp = req.process(cluster.getSolrClient());
+    assertEquals(0, rsp.getStatus());
+    assertNotNull(rsp.getResponse().get(collectionName));
+    assertNotNull(rsp.getResponse().findRecursive(collectionName, "properties"));
+    final var collPropMap =
+        (Map<String, Object>) rsp.getResponse().findRecursive(collectionName, "properties");
+    assertEquals("conf2", collPropMap.get("configName"));
+    assertEquals(2L, collPropMap.get("nrtReplicas"));
+    assertEquals("0", collPropMap.get("tlogReplicas"));
+    assertEquals("0", collPropMap.get("pullReplicas"));
+    assertEquals(
+        2, ((NamedList<Object>) rsp.getResponse().findRecursive(collectionName, "shards")).size());
+    assertNotNull(rsp.getResponse().findRecursive(collectionName, "shards", "shard1", "leader"));
+    // Ensure more advanced info is not returned
+    assertNull(
+        rsp.getResponse().findRecursive(collectionName, "shards", "shard1", "leader", "segInfos"));
+
+    // Returns segment metadata iff requested
+    req = CollectionAdminRequest.collectionStatus(collectionName);
+    req.setWithSegments(true);
+    rsp = req.process(cluster.getSolrClient());
+    assertEquals(0, rsp.getStatus());
+    assertNotNull(rsp.getResponse().get(collectionName));
+    assertRspPathNotNull(
+        rsp, collectionName, "shards", "shard1", "leader", "segInfos", "segments", "_0");
+    // Ensure field, size, etc. information isn't returned if only segment data was requested
+    assertRspPathNull(
+        rsp, collectionName, "shards", "shard1", "leader", "segInfos", "segments", "_0", "fields");
+    assertRspPathNull(
+        rsp,
+        collectionName,
+        "shards",
+        "shard1",
+        "leader",
+        "segInfos",
+        "segments",
+        "_0",
+        "largestFiles");
+
+    // Returns segment metadata and file-size info iff requested
+    // (Note that 'sizeInfo=true' should implicitly enable segments=true)
+    req = CollectionAdminRequest.collectionStatus(collectionName);
+    req.setWithSizeInfo(true);
+    rsp = req.process(cluster.getSolrClient());
+    assertEquals(0, rsp.getStatus());
+    assertRspPathNotNull(rsp, collectionName);
+    assertRspPathNotNull(
+        rsp, collectionName, "shards", "shard1", "leader", "segInfos", "segments", "_0");
+    assertRspPathNotNull(
+        rsp,
+        collectionName,
+        "shards",
+        "shard1",
+        "leader",
+        "segInfos",
+        "segments",
+        "_0",
+        "largestFiles");
+    // Ensure field, etc. information isn't returned if only segment+size data was requested
+    assertRspPathNull(
+        rsp, collectionName, "shards", "shard1", "leader", "segInfos", "segments", "_0", "fields");
+
+    // Set all flags and ensure everything is returned as expected
+    req = CollectionAdminRequest.collectionStatus(collectionName);
+    req.setWithSegments(true);
     req.setWithFieldInfo(true);
     req.setWithCoreInfo(true);
-    req.setWithSegments(true);
     req.setWithSizeInfo(true);
-    CollectionAdminResponse rsp = req.process(cluster.getSolrClient());
+    rsp = req.process(cluster.getSolrClient());
     assertEquals(0, rsp.getStatus());
     @SuppressWarnings({"unchecked"})
     List<Object> nonCompliant =
@@ -738,14 +693,22 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     assertEquals(nonCompliant.toString(), 1, nonCompliant.size());
     assertTrue(nonCompliant.toString(), nonCompliant.contains("(NONE)"));
     @SuppressWarnings({"unchecked"})
-    NamedList<Object> segInfos =
-        (NamedList<Object>)
-            rsp.getResponse()
-                .findRecursive(collectionName, "shards", "shard1", "leader", "segInfos");
-    assertNotNull(Utils.toJSONString(rsp), segInfos.findRecursive("info", "core", "startTime"));
-    assertNotNull(Utils.toJSONString(rsp), segInfos.get("fieldInfoLegend"));
+    final var segInfos =
+        (Map<String, Object>)
+            Utils.getObjectByPath(
+                rsp.getResponse(),
+                false,
+                List.of(collectionName, "shards", "shard1", "leader", "segInfos"));
     assertNotNull(
-        Utils.toJSONString(rsp), segInfos.findRecursive("segments", "_0", "fields", "id", "flags"));
+        Utils.toJSONString(rsp),
+        Utils.getObjectByPath(segInfos, false, List.of("info", "core", "startTime")));
+    assertNotNull(
+        Utils.toJSONString(rsp),
+        Utils.getObjectByPath(segInfos, false, List.of("fieldInfoLegend")));
+    assertNotNull(
+        Utils.toJSONString(rsp),
+        Utils.getObjectByPath(segInfos, false, List.of("segments", "_0", "fields", "id", "flags")));
+
     // test for replicas not active - SOLR-13882
     DocCollection coll = cluster.getSolrClient().getClusterState().getCollection(collectionName);
     Replica firstReplica = coll.getSlice("shard1").getReplicas().iterator().next();
@@ -759,7 +722,10 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     assertEquals(0, rsp.getStatus());
     Number down =
         (Number)
-            rsp.getResponse().findRecursive(collectionName, "shards", "shard1", "replicas", "down");
+            Utils.getObjectByPath(
+                rsp.getResponse(),
+                false,
+                List.of(collectionName, "shards", "shard1", "replicas", "down"));
     assertTrue(
         "should be some down replicas, but there were none in shard1:" + rsp, down.intValue() > 0);
 
@@ -774,10 +740,8 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     req = CollectionAdminRequest.collectionStatus(implicitColl);
     rsp = req.process(cluster.getSolrClient());
     assertNotNull(rsp.getResponse().get(implicitColl));
-    assertNotNull(
-        rsp.toString(), rsp.getResponse().findRecursive(implicitColl, "shards", "shardA"));
-    assertNotNull(
-        rsp.toString(), rsp.getResponse().findRecursive(implicitColl, "shards", "shardB"));
+    assertRspPathNotNull(rsp, implicitColl, "shards", "shardA");
+    assertRspPathNotNull(rsp, implicitColl, "shards", "shardB");
   }
 
   @Test
@@ -819,16 +783,75 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     assertNotNull(rsp.getResponse().get(collectionNames[0]));
   }
 
+  /**
+   * Unit test for the v2 API: GET /api/collections/$collName
+   *
+   * <p>Uses the OAS-generated SolrRequest/SolrResponse API binding.
+   */
+  @Test
+  public void testV2BasicCollectionStatus() throws Exception {
+    final String simpleCollName = "simpleCollection";
+    CollectionAdminRequest.createCollection(simpleCollName, "conf2", 2, 1, 1, 1)
+        .process(cluster.getSolrClient());
+    cluster.waitForActiveCollection(simpleCollName, 2, 6);
+    indexSomeDocs(simpleCollName);
+
+    final var simpleResponse =
+        new CollectionsApi.GetCollectionStatus(simpleCollName).process(cluster.getSolrClient());
+    assertEquals(simpleCollName, simpleResponse.name);
+    assertEquals(2, simpleResponse.shards.size());
+    assertEquals(Integer.valueOf(2), simpleResponse.activeShards);
+    assertEquals(Integer.valueOf(0), simpleResponse.inactiveShards);
+    assertEquals(Integer.valueOf(1), simpleResponse.properties.nrtReplicas);
+    assertEquals(Integer.valueOf(1), simpleResponse.properties.replicationFactor);
+    assertEquals(Integer.valueOf(1), simpleResponse.properties.pullReplicas);
+    assertEquals(Integer.valueOf(1), simpleResponse.properties.tlogReplicas);
+    assertNotNull(simpleResponse.shards.get("shard1").leader);
+    assertNull(simpleResponse.shards.get("shard1").leader.segInfos);
+
+    // Ensure segment data present when request sets 'segments=true' flag
+    final var segmentDataRequest = new CollectionsApi.GetCollectionStatus(simpleCollName);
+    segmentDataRequest.setSegments(true);
+    final var segmentDataResponse = segmentDataRequest.process(cluster.getSolrClient());
+    var segmentData = segmentDataResponse.shards.get("shard1").leader.segInfos;
+    assertNotNull(segmentData);
+    assertTrue(segmentData.info.numSegments > 0); // Expect at least one segment
+    assertEquals(segmentData.info.numSegments.intValue(), segmentData.segments.size());
+    assertEquals(Version.LATEST.toString(), segmentData.info.commitLuceneVersion);
+    // Ensure field, size, etc. data not provided
+    assertNull(segmentData.segments.get("_0").fields);
+    assertNull(segmentData.segments.get("_0").largestFilesByName);
+
+    // Ensure file-size data present when request sets sizeInfo flag
+    final var segmentFileSizeRequest = new CollectionsApi.GetCollectionStatus(simpleCollName);
+    segmentFileSizeRequest.setSizeInfo(true);
+    final var segmentFileSizeResponse = segmentFileSizeRequest.process(cluster.getSolrClient());
+    segmentData = segmentFileSizeResponse.shards.get("shard1").leader.segInfos;
+    assertNotNull(segmentData);
+    final var largeFileList = segmentData.segments.get("_0").largestFilesByName;
+    assertNotNull(largeFileList);
+    // Hard to assert what the largest index files should be, but:
+    //   - there should be at least 1 entry and...
+    //   - all keys/values should be non-empty
+    assertTrue(largeFileList.size() > 0);
+    largeFileList.forEach(
+        (fileName, size) -> {
+          assertThat(fileName, is(not(emptyString())));
+          assertThat(size, is(not(emptyString())));
+        });
+    // Ensure field, etc. data not provided
+    assertNull(segmentData.segments.get("_0").fields);
+  }
+
   private static final int NUM_DOCS = 10;
 
   @Test
   public void testReadOnlyCollection() throws Exception {
     String collectionName = getSaferTestName();
-    CloudSolrClient solrClient = cluster.getSolrClient();
 
-    CollectionAdminRequest.createCollection(collectionName, "conf", 2, 2).process(solrClient);
-
-    solrClient.setDefaultCollection(collectionName);
+    CollectionAdminRequest.createCollection(collectionName, "conf", 2, 2)
+        .process(cluster.getSolrClient());
+    CloudSolrClient solrClient = cluster.getSolrClient(collectionName);
 
     cluster.waitForActiveCollection(collectionName, 2, 4);
 
@@ -854,7 +877,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
         ZkStateReader.from(solrClient).getLeaderRetry(collectionName, "shard1", DEFAULT_TIMEOUT);
 
     final AtomicReference<Long> coreStartTime =
-        new AtomicReference<>(getCoreStatus(leader).getCoreStartTime().getTime());
+        new AtomicReference<>(getCoreStatus(leader).startTime.getTime());
 
     // Check for value change
     CollectionAdminRequest.modifyCollection(
@@ -875,7 +898,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
         () -> {
           long restartTime = 0;
           try {
-            restartTime = getCoreStatus(leader).getCoreStartTime().getTime();
+            restartTime = getCoreStatus(leader).startTime.getTime();
           } catch (Exception e) {
             log.warn("Exception getting core start time: ", e);
             return false;
@@ -883,7 +906,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
           return restartTime > coreStartTime.get();
         });
 
-    coreStartTime.set(getCoreStatus(leader).getCoreStartTime().getTime());
+    coreStartTime.set(getCoreStatus(leader).startTime.getTime());
 
     // check for docs - reloading should have committed the new docs
     // this also verifies that searching works in read-only mode
@@ -946,7 +969,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
         () -> {
           long restartTime = 0;
           try {
-            restartTime = getCoreStatus(leader).getCoreStartTime().getTime();
+            restartTime = getCoreStatus(leader).startTime.getTime();
           } catch (Exception e) {
             log.warn("Exception getting core start time: ", e);
             return false;
@@ -1149,7 +1172,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     delete.setFollowAliases(false);
     delete.process(solrClient);
     ClusterState state = solrClient.getClusterState();
-    assertFalse(state.getCollectionsMap().toString(), state.hasCollection(collectionName1));
+    assertFalse(collectionNamesString(state), state.hasCollection(collectionName1));
     // search should still work, returning results from collection 2
     assertDoc(solrClient, collectionName1, "2"); // aliased
     assertDoc(solrClient, collectionName2, "2"); // direct
@@ -1170,7 +1193,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
 
     state = solrClient.getClusterState();
     // the collection is gone
-    assertFalse(state.getCollectionsMap().toString(), state.hasCollection(collectionName2));
+    assertFalse(collectionNamesString(state), state.hasCollection(collectionName2));
 
     // and the alias is gone
     RetryUtil.retryUntil(
@@ -1187,6 +1210,10 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
             return false;
           }
         });
+  }
+
+  private static String collectionNamesString(ClusterState state) {
+    return state.collectionStream().map(Object::toString).collect(Collectors.joining(","));
   }
 
   private void assertDoc(CloudSolrClient solrClient, String collection, String id)
@@ -1240,7 +1267,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expecting property 'preferredleader' to appear on replica " + replica.getName(),
         collection,
-        (n, c) -> "true".equals(c.getReplica(replica.getName()).getProperty("preferredleader")));
+        c -> "true".equals(c.getReplica(replica.getName()).getProperty("preferredleader")));
 
     response =
         CollectionAdminRequest.deleteReplicaProperty(
@@ -1251,7 +1278,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expecting property 'preferredleader' to be removed from replica " + replica.getName(),
         collection,
-        (n, c) -> c.getReplica(replica.getName()).getProperty("preferredleader") == null);
+        c -> c.getReplica(replica.getName()).getProperty("preferredleader") == null);
   }
 
   @Test
@@ -1271,7 +1298,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expecting 'preferredleader' property to be balanced across all shards",
         collection,
-        (n, c) -> {
+        c -> {
           for (Slice slice : c) {
             int count = 0;
             for (Replica replica : slice) {
@@ -1298,7 +1325,7 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
     waitForState(
         "Expecting attribute 'replicationFactor' to be 25",
         collection,
-        (n, c) -> 25 == c.getReplicationFactor());
+        c -> 25 == c.getReplicationFactor());
 
     expectThrows(
         IllegalArgumentException.class,
@@ -1323,5 +1350,34 @@ public class CollectionsAPISolrJTest extends SolrCloudTestCase {
             CollectionAdminRequest.modifyCollection(collection, null)
                 .unsetAttribute("non_existent_attr")
                 .process(cluster.getSolrClient()));
+  }
+
+  @Test
+  public void testCollectionCreationTime() throws SolrServerException, IOException {
+    Instant beforeCreation = Instant.now();
+
+    String collectionName = getSaferTestName();
+    CollectionAdminRequest.createCollection(collectionName, "conf", 1, 1)
+        .process(cluster.getSolrClient());
+
+    cluster.waitForActiveCollection(collectionName, 1, 1);
+
+    Instant afterCreation = Instant.now();
+
+    CollectionAdminRequest.ColStatus req = CollectionAdminRequest.collectionStatus(collectionName);
+    CollectionAdminResponse response = req.process(cluster.getSolrClient());
+    assertEquals(0, response.getStatus());
+
+    NamedList<?> colStatus = (NamedList<?>) response.getResponse().get(collectionName);
+    Long creationTimeMillis = (Long) colStatus._get("creationTimeMillis", null);
+    assertNotNull("creationTimeMillis was not included in COLSTATUS response", creationTimeMillis);
+
+    Instant creationTime = Instant.ofEpochMilli(creationTimeMillis);
+    assertTrue(
+        "COLSTATUS creationTimeMillis should be after the test started",
+        creationTime.isAfter(beforeCreation));
+    assertTrue(
+        "COLSTATUS creationTimeMillis should not be after the collection creation was completed",
+        creationTime.isBefore(afterCreation));
   }
 }
