@@ -19,10 +19,11 @@ package org.apache.solr.cloud;
 
 import static java.util.Collections.singletonList;
 
+import com.carrotsearch.randomizedtesting.generators.RandomStrings;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
@@ -31,16 +32,12 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import org.apache.commons.codec.digest.DigestUtils;
-import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.request.UpdateRequest;
 import org.apache.solr.cloud.ZkTestServer.LimitViolationAction;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.ZkStateReader;
-import org.apache.solr.common.params.ModifiableSolrParams;
-import org.apache.solr.common.util.TimeSource;
-import org.apache.solr.util.TimeOut;
 import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -147,25 +144,22 @@ public class LeaderFailureAfterFreshStartTest extends AbstractFullDistribZkTestB
       // start the freshNode
       restartNodes(singletonList(freshNode));
       String coreName = freshNode.jetty.getCoreContainer().getCores().iterator().next().getName();
-      String replicationProperties =
-          freshNode.jetty.getSolrHome() + "/cores/" + coreName + "/data/replication.properties";
-      String md5 = DigestUtils.md5Hex(Files.readAllBytes(Paths.get(replicationProperties)));
+      Path replicationProperties =
+          Path.of(
+              freshNode.jetty.getSolrHome(), "cores", coreName, "data", "replication.properties");
+      String md5 = DigestUtils.md5Hex(Files.readAllBytes(replicationProperties));
 
       // shutdown the original leader
       log.info("Now shutting down initial leader");
       forceNodeFailures(singletonList(initialLeaderJetty));
-      waitForNewLeader(
-          cloudClient,
-          "shard1",
-          (Replica) initialLeaderJetty.client.info,
-          new TimeOut(15, TimeUnit.SECONDS, TimeSource.NANO_TIME));
+      waitForNewLeader(cloudClient, "shard1", initialLeaderJetty.info);
       waitTillNodesActive();
       log.info("Updating mappings from zk");
       updateMappingsFromZk(jettys, clients, true);
       assertEquals(
           "Node went into replication",
           md5,
-          DigestUtils.md5Hex(Files.readAllBytes(Paths.get(replicationProperties))));
+          DigestUtils.md5Hex(Files.readAllBytes(replicationProperties)));
 
       success = true;
     } finally {
@@ -240,12 +234,13 @@ public class LeaderFailureAfterFreshStartTest extends AbstractFullDistribZkTestB
     SolrInputDocument doc = new SolrInputDocument();
 
     addFields(doc, fields);
-    addFields(doc, "rnd_s", RandomStringUtils.random(random().nextInt(100) + 100));
+    addFields(
+        doc,
+        "rnd_s",
+        RandomStrings.randomAsciiLettersOfLength(random(), random().nextInt(100) + 100));
 
     UpdateRequest ureq = new UpdateRequest();
     ureq.add(doc);
-    ModifiableSolrParams params = new ModifiableSolrParams();
-    ureq.setParams(params);
     ureq.process(cloudClient);
   }
 
