@@ -22,31 +22,33 @@ import static org.apache.solr.core.CoreContainer.LOAD_COMPLETE;
 import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.core.StringContains.containsString;
 
-import com.google.common.collect.ImmutableMap;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
 import java.io.Writer;
+import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.attribute.PosixFilePermission;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import org.apache.commons.io.FileUtils;
 import org.apache.lucene.util.IOUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.RetryUtil;
-import org.hamcrest.MatcherAssert;
 import org.junit.After;
+import org.junit.AssumptionViolatedException;
 import org.junit.BeforeClass;
 import org.junit.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestCoreDiscovery extends SolrTestCaseJ4 {
+  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   @BeforeClass
   public static void beforeClass() throws Exception {
@@ -62,8 +64,8 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
           xmlStr.replace(
               "<solr>", "<solr> <str name=\"coreRootDirectory\">" + alternateCoreDir + "</str> ");
     }
-    File tmpFile = new File(solrHomeDirectory.toFile(), SolrXmlConfig.SOLR_XML_FILE);
-    FileUtils.write(tmpFile, xmlStr, IOUtils.UTF_8);
+    Path tmpFile = solrHomeDirectory.resolve(SolrXmlConfig.SOLR_XML_FILE);
+    Files.writeString(tmpFile, xmlStr, StandardCharsets.UTF_8);
   }
 
   private void setMeUp() throws Exception {
@@ -88,36 +90,36 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
     return props;
   }
 
-  private void addCoreWithProps(Properties stockProps, File propFile) throws Exception {
-    if (!propFile.getParentFile().exists()) propFile.getParentFile().mkdirs();
-    Writer out = new OutputStreamWriter(new FileOutputStream(propFile), StandardCharsets.UTF_8);
-    try {
-      stockProps.store(out, null);
-    } finally {
-      out.close();
+  private void addCoreWithProps(Properties stockProps, Path propFile) throws Exception {
+    if (!Files.exists(propFile.getParent())) {
+      Files.createDirectories(propFile.getParent());
     }
-    addConfFiles(new File(propFile.getParent(), "conf"));
+    try (Writer out = Files.newBufferedWriter(propFile, StandardCharsets.UTF_8)) {
+      stockProps.store(out, null);
+    }
+    addConfFiles(propFile.getParent().resolve("conf"));
   }
 
   private void addCoreWithProps(String name, Properties stockProps) throws Exception {
-
-    File propFile =
-        new File(
-            new File(solrHomeDirectory.toFile(), name), CorePropertiesLocator.PROPERTIES_FILENAME);
-    File parent = propFile.getParentFile();
-    assertTrue("Failed to mkdirs for " + parent.getAbsolutePath(), parent.mkdirs());
+    Path propFile =
+        solrHomeDirectory.resolve(name).resolve(CorePropertiesLocator.PROPERTIES_FILENAME);
+    Path parent = propFile.getParent();
+    try {
+      Files.createDirectories(parent);
+    } catch (Exception e) {
+      throw new IOException("Failed to mkdirs for " + parent.toAbsolutePath());
+    }
     addCoreWithProps(stockProps, propFile);
   }
 
-  private void addConfFiles(File confDir) throws Exception {
+  private void addConfFiles(Path confDir) throws Exception {
     String top = SolrTestCaseJ4.TEST_HOME() + "/collection1/conf";
-    assertTrue("Failed to mkdirs for " + confDir.getAbsolutePath(), confDir.mkdirs());
-    FileUtils.copyFile(new File(top, "schema-tiny.xml"), new File(confDir, "schema-tiny.xml"));
-    FileUtils.copyFile(
-        new File(top, "solrconfig-minimal.xml"), new File(confDir, "solrconfig-minimal.xml"));
-    FileUtils.copyFile(
-        new File(top, "solrconfig.snippet.randomindexconfig.xml"),
-        new File(confDir, "solrconfig.snippet.randomindexconfig.xml"));
+    Files.createDirectories(confDir);
+    Files.copy(Path.of(top, "schema-tiny.xml"), confDir.resolve("schema-tiny.xml"));
+    Files.copy(Path.of(top, "solrconfig-minimal.xml"), confDir.resolve("solrconfig-minimal.xml"));
+    Files.copy(
+        Path.of(top, "solrconfig.snippet.randomindexconfig.xml"),
+        confDir.resolve("solrconfig.snippet.randomindexconfig.xml"));
   }
 
   private CoreContainer init() {
@@ -191,13 +193,11 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
         Properties persistable = cd1.getPersistableUserProperties();
         persistable.setProperty("bogusprop", "bogusval");
         cc.getCoresLocator().persist(cc, cd1);
-        File propFile =
-            new File(
-                new File(solrHomeDirectory.toFile(), "core1"),
-                CorePropertiesLocator.PROPERTIES_FILENAME);
+        Path propFile =
+            solrHomeDirectory.resolve("core1").resolve(CorePropertiesLocator.PROPERTIES_FILENAME);
         Properties newProps = new Properties();
         try (InputStreamReader is =
-            new InputStreamReader(new FileInputStream(propFile), StandardCharsets.UTF_8)) {
+            new InputStreamReader(Files.newInputStream(propFile), StandardCharsets.UTF_8)) {
           newProps.load(is);
         }
         // is it there?
@@ -239,7 +239,7 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
     // Sanity check that a core did get loaded
     addCoreWithProps("corep2", makeCoreProperties("corep2", false, true));
 
-    Path coreP1PropFile = Paths.get(solrHomeDirectory.toString(), "corep1", "core.properties");
+    Path coreP1PropFile = solrHomeDirectory.resolve("corep1").resolve("core.properties");
     assertTrue(
         "Core.properties file should exist for before core load failure core corep1",
         Files.exists(coreP1PropFile));
@@ -256,13 +256,13 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
           "Core.properties file should still exist for core corep1", Files.exists(coreP1PropFile));
 
       // Creating a core successfully should create a core.properties file
-      Path corePropFile = Paths.get(solrHomeDirectory.toString(), "corep3", "core.properties");
+      Path corePropFile = solrHomeDirectory.resolve("corep3").resolve("core.properties");
       assertFalse("Should not be a properties file yet", Files.exists(corePropFile));
-      cc.create("corep3", ImmutableMap.of("configSet", "minimal"));
+      cc.create("corep3", Map.of("configSet", "minimal"));
       assertTrue("Should be a properties file for newly created core", Files.exists(corePropFile));
 
       // Failing to create a core should _not_ leave a core.properties file hanging around.
-      corePropFile = Paths.get(solrHomeDirectory.toString(), "corep4", "core.properties");
+      corePropFile = solrHomeDirectory.resolve("corep4").resolve("core.properties");
       assertFalse("Should not be a properties file yet for corep4", Files.exists(corePropFile));
 
       thrown =
@@ -271,7 +271,7 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
               () -> {
                 cc.create(
                     "corep4",
-                    ImmutableMap.of(
+                    Map.of(
                         CoreDescriptor.CORE_NAME, "corep4",
                         CoreDescriptor.CORE_SCHEMA, "not-there.xml",
                         CoreDescriptor.CORE_CONFIG, "solrconfig-minimal.xml",
@@ -285,10 +285,10 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
 
       // Finally, let's determine that this create path operation also leaves a prop file.
 
-      corePropFile = Paths.get(solrHomeDirectory.toString(), "corep5", "core.properties");
+      corePropFile = solrHomeDirectory.resolve("corep5").resolve("core.properties");
       assertFalse("Should not be a properties file yet for corep5", Files.exists(corePropFile));
 
-      cc.create("corep5", ImmutableMap.of("configSet", "minimal"));
+      cc.create("corep5", Map.of("configSet", "minimal"));
 
       assertTrue(
           "corep5 should have left a core.properties file on disk", Files.exists(corePropFile));
@@ -334,11 +334,20 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
       // Just check that the proper number of cores are loaded since making the test depend on order
       // would be fragile
       RetryUtil.retryUntil(
-          "There should only be 3 cores loaded, coreLOS and two coreT? cores",
-          5,
+          "There should only be 3 cores loaded, coreLOS and two coreT# cores",
+          20,
           200,
           TimeUnit.MILLISECONDS,
-          () -> 3 == cc.getLoadedCoreNames().size());
+          () -> {
+            // See SOLR-16104 about this flakiness
+            final var loadedCoreNames = cc.getLoadedCoreNames();
+            if (3 == loadedCoreNames.size() || 4 == loadedCoreNames.size()) {
+              // 4 sometimes... Caffeine or background threads makes it hard to be deterministic?
+              return true;
+            }
+            log.warn("Waiting for 3|4 loaded cores but got: {}", loadedCoreNames);
+            return false;
+          });
 
       SolrCore c1 = cc.getCore("coreT1");
       assertNotNull("Core T1 should NOT BE NULL", c1);
@@ -385,27 +394,31 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
     final String message = thrown.getMessage();
     assertTrue(
         "Wrong exception thrown on duplicate core names",
-        message.indexOf("Found multiple cores with the name [core1]") != -1);
+        message.contains("Found multiple cores with the name [core1]"));
     assertTrue(
-        File.separator + "core1 should have been mentioned in the message: " + message,
-        message.indexOf(File.separator + "core1") != -1);
+        FileSystems.getDefault().getSeparator()
+            + "core1 should have been mentioned in the message: "
+            + message,
+        message.contains(FileSystems.getDefault().getSeparator() + "core1"));
     assertTrue(
-        File.separator + "core2 should have been mentioned in the message:" + message,
-        message.indexOf(File.separator + "core2") != -1);
+        FileSystems.getDefault().getSeparator()
+            + "core2 should have been mentioned in the message:"
+            + message,
+        message.contains(FileSystems.getDefault().getSeparator() + "core2"));
   }
 
   @Test
   public void testAlternateCoreDir() throws Exception {
 
-    File alt = createTempDir().toFile();
+    Path alt = createTempDir();
 
-    setMeUp(alt.getAbsolutePath());
+    setMeUp(alt.toAbsolutePath().toString());
     addCoreWithProps(
         makeCoreProperties("core1", false, true, "dataDir=core1"),
-        new File(alt, "core1" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        alt.resolve("core1").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
     addCoreWithProps(
         makeCoreProperties("core2", false, false, "dataDir=core2"),
-        new File(alt, "core2" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        alt.resolve("core2").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
     CoreContainer cc = init();
     try (SolrCore core1 = cc.getCore("core1");
         SolrCore core2 = cc.getCore("core2")) {
@@ -428,22 +441,17 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
         solrHomeDirectory
             .resolve(relative)
             .resolve("core1")
-            .resolve(CorePropertiesLocator.PROPERTIES_FILENAME)
-            .toFile());
+            .resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
     addCoreWithProps(
         makeCoreProperties("core2", false, false, "dataDir=core2"),
         solrHomeDirectory
             .resolve(relative)
             .resolve("core2")
-            .resolve(CorePropertiesLocator.PROPERTIES_FILENAME)
-            .toFile());
+            .resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
     // one core *not* under the relative directory
     addCoreWithProps(
         makeCoreProperties("core0", false, true, "datadir=core0"),
-        solrHomeDirectory
-            .resolve("core0")
-            .resolve(CorePropertiesLocator.PROPERTIES_FILENAME)
-            .toFile());
+        solrHomeDirectory.resolve("core0").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
 
     CoreContainer cc = init();
     try (SolrCore core1 = cc.getCore("core1");
@@ -453,9 +461,8 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
 
       assertNull(cc.getCore("core0"));
 
-      SolrCore core3 = cc.create("core3", ImmutableMap.of("configSet", "minimal"));
-      MatcherAssert.assertThat(
-          core3.getCoreDescriptor().getInstanceDir().toString(), containsString("relative"));
+      SolrCore core3 = cc.create("core3", Map.of("configSet", "minimal"));
+      assertThat(core3.getCoreDescriptor().getInstanceDir().toString(), containsString("relative"));
 
     } finally {
       cc.shutdown();
@@ -464,14 +471,14 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
 
   @Test
   public void testNoCoreDir() throws Exception {
-    File noCoreDir = createTempDir().toFile();
-    setMeUp(noCoreDir.getAbsolutePath());
+    Path noCoreDir = createTempDir();
+    setMeUp(noCoreDir.toAbsolutePath().toString());
     addCoreWithProps(
         makeCoreProperties("core1", false, true),
-        new File(noCoreDir, "core1" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        noCoreDir.resolve("core1").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
     addCoreWithProps(
         makeCoreProperties("core2", false, false),
-        new File(noCoreDir, "core2" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        noCoreDir.resolve("core2").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
     CoreContainer cc = init();
     try (SolrCore core1 = cc.getCore("core1");
         SolrCore core2 = cc.getCore("core2")) {
@@ -484,21 +491,29 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
 
   @Test
   public void testCoreDirCantRead() throws Exception {
-    File coreDir = solrHomeDirectory.toFile();
-    setMeUp(coreDir.getAbsolutePath());
+    Path coreDir = solrHomeDirectory;
+    setMeUp(coreDir.toAbsolutePath().toString());
     addCoreWithProps(
         makeCoreProperties("core1", false, true),
-        new File(coreDir, "core1" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        coreDir.resolve("core1").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
 
     // Ensure that another core is opened successfully
     addCoreWithProps(
         makeCoreProperties("core2", false, false, "dataDir=core2"),
-        new File(coreDir, "core2" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        coreDir.resolve("core2").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
 
-    File toSet = new File(coreDir, "core1");
-    assumeTrue(
-        "Cannot make " + toSet + " non-readable. Test aborted.", toSet.setReadable(false, false));
-    assumeFalse("Appears we are a super user, skip test", toSet.canRead());
+    Path toSet = coreDir.resolve("core1");
+    try {
+      Set<PosixFilePermission> perms = Files.getPosixFilePermissions(toSet);
+      perms.remove(PosixFilePermission.OWNER_READ);
+      perms.remove(PosixFilePermission.GROUP_READ);
+      perms.remove(PosixFilePermission.OTHERS_READ);
+      Files.setAttribute(toSet, "posix:permissions", perms);
+    } catch (UnsupportedOperationException e) {
+      throw new AssumptionViolatedException(
+          "Cannot make " + toSet + " non-readable. Test aborted.", e);
+    }
+    assumeFalse("Appears we are a super user, skip test", Files.isReadable(toSet));
     CoreContainer cc = init();
     try (SolrCore core1 = cc.getCore("core1");
         SolrCore core2 = cc.getCore("core2")) {
@@ -508,28 +523,43 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
       cc.shutdown();
     }
     // So things can be cleaned up by the framework!
-    toSet.setReadable(true, false);
+    Set<PosixFilePermission> perms = Files.getPosixFilePermissions(toSet);
+    perms.add(PosixFilePermission.OWNER_READ);
+    perms.add(PosixFilePermission.GROUP_READ);
+    perms.add(PosixFilePermission.OTHERS_READ);
+    Files.setAttribute(toSet, "posix:permissions", perms);
   }
 
   @Test
   public void testNonCoreDirCantRead() throws Exception {
-    File coreDir = solrHomeDirectory.toFile();
-    setMeUp(coreDir.getAbsolutePath());
+    Path coreDir = solrHomeDirectory;
+    setMeUp(coreDir.toAbsolutePath().toString());
     addCoreWithProps(
         makeCoreProperties("core1", false, true),
-        new File(coreDir, "core1" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        coreDir.resolve("core1").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
 
     addCoreWithProps(
         makeCoreProperties("core2", false, false, "dataDir=core2"),
-        new File(coreDir, "core2" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        coreDir.resolve("core2").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
 
-    File toSet = new File(solrHomeDirectory.toFile(), "cantReadDir");
-    assertTrue(
-        "Should have been able to make directory '" + toSet.getAbsolutePath() + "' ",
-        toSet.mkdirs());
-    assumeTrue(
-        "Cannot make " + toSet + " non-readable. Test aborted.", toSet.setReadable(false, false));
-    assumeFalse("Appears we are a super user, skip test", toSet.canRead());
+    Path toSet = solrHomeDirectory.resolve("cantReadDir");
+    try {
+      Files.createDirectories(toSet);
+    } catch (IOException e) {
+      throw new RuntimeException(
+          "Should have been able to make directory '" + toSet.toAbsolutePath() + "' ", e);
+    }
+    try {
+      Set<PosixFilePermission> perms = Files.getPosixFilePermissions(toSet);
+      perms.remove(PosixFilePermission.OWNER_READ);
+      perms.remove(PosixFilePermission.GROUP_READ);
+      perms.remove(PosixFilePermission.OTHERS_READ);
+      Files.setAttribute(toSet, "posix:permissions", perms);
+    } catch (UnsupportedOperationException e) {
+      throw new AssumptionViolatedException(
+          "Cannot make " + toSet + " non-readable. Test aborted.", e);
+    }
+    assumeFalse("Appears we are a super user, skip test", Files.isReadable(toSet));
     CoreContainer cc = init();
     try (SolrCore core1 = cc.getCore("core1");
         SolrCore core2 = cc.getCore("core2")) {
@@ -540,23 +570,41 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
       cc.shutdown();
     }
     // So things can be cleaned up by the framework!
-    toSet.setReadable(true, false);
+    Set<PosixFilePermission> perms = Files.getPosixFilePermissions(toSet);
+    perms.add(PosixFilePermission.OWNER_READ);
+    perms.add(PosixFilePermission.GROUP_READ);
+    perms.add(PosixFilePermission.OTHERS_READ);
+    Files.setAttribute(toSet, "posix:permissions", perms);
   }
 
   @Test
   public void testFileCantRead() throws Exception {
-    File coreDir = solrHomeDirectory.toFile();
-    setMeUp(coreDir.getAbsolutePath());
+    Path coreDir = solrHomeDirectory;
+    setMeUp(coreDir.toAbsolutePath().toString());
     addCoreWithProps(
         makeCoreProperties("core1", false, true),
-        new File(coreDir, "core1" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        coreDir.resolve("core1").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
 
-    File toSet = new File(solrHomeDirectory.toFile(), "cantReadFile");
-    assertTrue(
-        "Should have been able to make file '" + toSet.getAbsolutePath() + "' ",
-        toSet.createNewFile());
-    assumeTrue(
-        "Cannot make " + toSet + " non-readable. Test aborted.", toSet.setReadable(false, false));
+    Path toSet = solrHomeDirectory.resolve("cantReadFile");
+
+    try {
+      Files.createFile(toSet);
+    } catch (IOException e) {
+      throw new RuntimeException(
+          "Should have been able to make file '" + toSet.toAbsolutePath() + "' ", e);
+    }
+
+    try {
+      Set<PosixFilePermission> perms = Files.getPosixFilePermissions(toSet);
+      perms.remove(PosixFilePermission.OWNER_READ);
+      perms.remove(PosixFilePermission.GROUP_READ);
+      perms.remove(PosixFilePermission.OTHERS_READ);
+      Files.setAttribute(toSet, "posix:permissions", perms);
+    } catch (UnsupportedOperationException e) {
+      throw new AssumptionViolatedException(
+          "Cannot make " + toSet + " non-readable. Test aborted.", e);
+    }
+
     CoreContainer cc = init();
     try (SolrCore core1 = cc.getCore("core1")) {
       assertNotNull(core1); // Should still be able to create core despite r/o file.
@@ -564,13 +612,17 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
       cc.shutdown();
     }
     // So things can be cleaned up by the framework!
-    toSet.setReadable(true, false);
+    Set<PosixFilePermission> perms = Files.getPosixFilePermissions(toSet);
+    perms.add(PosixFilePermission.OWNER_READ);
+    perms.add(PosixFilePermission.GROUP_READ);
+    perms.add(PosixFilePermission.OTHERS_READ);
+    Files.setAttribute(toSet, "posix:permissions", perms);
   }
 
   @Test
   public void testSolrHomeDoesntExist() throws Exception {
-    File homeDir = solrHomeDirectory.toFile();
-    IOUtils.rm(homeDir.toPath());
+    Path homeDir = solrHomeDirectory;
+    IOUtils.rm(homeDir);
     CoreContainer cc = null;
     try {
       cc = init();
@@ -587,16 +639,24 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
 
   @Test
   public void testSolrHomeNotReadable() throws Exception {
-    File homeDir = solrHomeDirectory.toFile();
-    setMeUp(homeDir.getAbsolutePath());
+    Path homeDir = solrHomeDirectory;
+    setMeUp(homeDir.toAbsolutePath().toString());
     addCoreWithProps(
         makeCoreProperties("core1", false, true),
-        new File(homeDir, "core1" + File.separator + CorePropertiesLocator.PROPERTIES_FILENAME));
+        homeDir.resolve("core1").resolve(CorePropertiesLocator.PROPERTIES_FILENAME));
 
-    assumeTrue(
-        "Cannot make " + homeDir + " non-readable. Test aborted.",
-        homeDir.setReadable(false, false));
-    assumeFalse("Appears we are a super user, skip test", homeDir.canRead());
+    try {
+      Set<PosixFilePermission> perms = Files.getPosixFilePermissions(homeDir);
+      perms.remove(PosixFilePermission.OWNER_READ);
+      perms.remove(PosixFilePermission.GROUP_READ);
+      perms.remove(PosixFilePermission.OTHERS_READ);
+      Files.setAttribute(homeDir, "posix:permissions", perms);
+    } catch (UnsupportedOperationException e) {
+      throw new AssumptionViolatedException(
+          "Cannot make " + homeDir + " non-readable. Test aborted.", e);
+    }
+
+    assumeFalse("Appears we are a super user, skip test", Files.isReadable(homeDir));
     Exception thrown =
         expectThrows(
             Exception.class,
@@ -608,10 +668,13 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
                 if (cc != null) cc.shutdown();
               }
             });
-    MatcherAssert.assertThat(
-        thrown.getMessage(), containsString("Error reading core root directory"));
+    assertThat(thrown.getMessage(), containsString("Error reading core root directory"));
     // So things can be cleaned up by the framework!
-    homeDir.setReadable(true, false);
+    Set<PosixFilePermission> perms = Files.getPosixFilePermissions(homeDir);
+    perms.add(PosixFilePermission.OWNER_READ);
+    perms.add(PosixFilePermission.GROUP_READ);
+    perms.add(PosixFilePermission.OTHERS_READ);
+    Files.setAttribute(homeDir, "posix:permissions", perms);
   }
 
   // For testing whether finding a solr.xml overrides looking at solr.properties
@@ -619,10 +682,9 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
       "<solr> "
           + "<int name=\"transientCacheSize\">2</int> "
           + "<str name=\"configSetBaseDir\">"
-          + Paths.get(TEST_HOME()).resolve("configsets")
+          + TEST_HOME().resolve("configsets")
           + "</str>"
           + "<solrcloud> "
-          + "<str name=\"hostContext\">solrprop</str> "
           + "<int name=\"zkClientTimeout\">20</int> "
           + "<str name=\"host\">222.333.444.555</str> "
           + "<int name=\"hostPort\">6000</int>  "
@@ -634,14 +696,14 @@ public class TestCoreDiscovery extends SolrTestCaseJ4 {
     NodeConfig config =
         SolrXmlConfig.fromString(
             solrHomeDirectory, "<solr><str name=\"coreRootDirectory\">relative</str></solr>");
-    MatcherAssert.assertThat(
+    assertThat(
         config.getCoreRootDirectory().toString(),
         containsString(solrHomeDirectory.toAbsolutePath().toString()));
 
     NodeConfig absConfig =
         SolrXmlConfig.fromString(
             solrHomeDirectory, "<solr><str name=\"coreRootDirectory\">/absolute</str></solr>");
-    MatcherAssert.assertThat(
+    assertThat(
         absConfig.getCoreRootDirectory().toString(),
         not(containsString(solrHomeDirectory.toAbsolutePath().toString())));
   }
