@@ -16,10 +16,11 @@
  */
 package org.apache.solr.core;
 
-import com.google.common.collect.ImmutableList;
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -28,7 +29,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.regex.Pattern;
-import org.apache.commons.io.FileUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.StreamingResponseCallback;
@@ -53,10 +53,10 @@ import org.junit.Test;
 
 public class TestLazyCores extends SolrTestCaseJ4 {
 
-  /** Transient core cache max size defined in the test solr.xml */
+  /** Transient core cache max size defined in the test solr-transientCores.xml */
   private static final int TRANSIENT_CORE_CACHE_MAX_SIZE = 4;
 
-  private File solrHomeDirectory;
+  private Path solrHomeDirectory;
 
   @BeforeClass
   public static void setupClass() throws Exception {
@@ -81,7 +81,7 @@ public class TestLazyCores extends SolrTestCaseJ4 {
       new ReadOnlyCoresLocator() {
         @Override
         public List<CoreDescriptor> discover(CoreContainer cc) {
-          return ImmutableList.of(
+          return List.of(
               makeCoreDescriptor(cc, "collection1", "false", "true"),
               makeCoreDescriptor(cc, "collection2", "true", "true"),
               makeCoreDescriptor(cc, "collection3", "on", "false"),
@@ -95,21 +95,21 @@ public class TestLazyCores extends SolrTestCaseJ4 {
       };
 
   private CoreContainer init() throws Exception {
-    solrHomeDirectory = createTempDir().toFile();
+    solrHomeDirectory = createTempDir();
 
-    copyXmlToHome(solrHomeDirectory.getAbsoluteFile(), "solr.xml");
+    copyXmlToHome(solrHomeDirectory, "solr-transientCores.xml");
     for (int idx = 1; idx < 10; ++idx) {
-      copyMinConf(new File(solrHomeDirectory, "collection" + idx));
+      copyMinConf(solrHomeDirectory.resolve("collection" + idx));
     }
 
-    NodeConfig cfg = NodeConfig.loadNodeConfig(solrHomeDirectory.toPath(), null);
+    NodeConfig cfg = NodeConfig.loadNodeConfig(solrHomeDirectory, null);
     return createCoreContainer(cfg, testCores);
   }
 
   private CoreContainer initEmpty() throws IOException {
-    solrHomeDirectory = createTempDir().toFile();
-    copyXmlToHome(solrHomeDirectory.getAbsoluteFile(), "solr.xml");
-    NodeConfig cfg = NodeConfig.loadNodeConfig(solrHomeDirectory.toPath(), null);
+    solrHomeDirectory = createTempDir();
+    copyXmlToHome(solrHomeDirectory, "solr-transientCores.xml");
+    NodeConfig cfg = NodeConfig.loadNodeConfig(solrHomeDirectory, null);
     return createCoreContainer(
         cfg,
         new ReadOnlyCoresLocator() {
@@ -426,10 +426,10 @@ public class TestLazyCores extends SolrTestCaseJ4 {
       SolrCore lc5 = cc.getCore("collection5");
       SolrCore lc6 = cc.getCore("collection6");
 
-      copyMinConf(new File(solrHomeDirectory, "t2"));
-      copyMinConf(new File(solrHomeDirectory, "t4"));
-      copyMinConf(new File(solrHomeDirectory, "t5"));
-      copyMinConf(new File(solrHomeDirectory, "t6"));
+      copyMinConf(solrHomeDirectory.resolve("t2"));
+      copyMinConf(solrHomeDirectory.resolve("t4"));
+      copyMinConf(solrHomeDirectory.resolve("t5"));
+      copyMinConf(solrHomeDirectory.resolve("t6"));
 
       // Should also fail with the same name
       tryCreateFail(admin, "collection2", "t12", "Core with name", "collection2", "already exists");
@@ -486,11 +486,11 @@ public class TestLazyCores extends SolrTestCaseJ4 {
   public void testCreateTransientFromAdmin() throws Exception {
     final CoreContainer cc = initEmpty();
     try {
-      copyMinConf(new File(solrHomeDirectory, "core1"));
-      copyMinConf(new File(solrHomeDirectory, "core2"));
-      copyMinConf(new File(solrHomeDirectory, "core3"));
-      copyMinConf(new File(solrHomeDirectory, "core4"));
-      copyMinConf(new File(solrHomeDirectory, "core5"));
+      copyMinConf(solrHomeDirectory.resolve("core1"));
+      copyMinConf(solrHomeDirectory.resolve("core2"));
+      copyMinConf(solrHomeDirectory.resolve("core3"));
+      copyMinConf(solrHomeDirectory.resolve("core4"));
+      copyMinConf(solrHomeDirectory.resolve("core5"));
 
       createViaAdmin(cc, "core1", true, true);
       createViaAdmin(cc, "core2", true, false);
@@ -595,10 +595,12 @@ public class TestLazyCores extends SolrTestCaseJ4 {
 
       // Did we get the expected message for each of the cores that failed to load? Make sure we
       // don't run afoul of the dreaded slash/backslash difference on Windows and *nix machines.
-      testMessage(cc.getCoreInitFailures(), makePath("badConfig1", "conf", "solrconfig.xml"));
-      testMessage(cc.getCoreInitFailures(), makePath("badConfig2", "conf", "solrconfig.xml"));
-      testMessage(cc.getCoreInitFailures(), makePath("badSchema1", "conf", "schema.xml"));
-      testMessage(cc.getCoreInitFailures(), makePath("badSchema2", "conf", "schema.xml"));
+      testMessage(
+          cc.getCoreInitFailures(), Path.of("badConfig1", "conf", "solrconfig.xml").toString());
+      testMessage(
+          cc.getCoreInitFailures(), Path.of("badConfig2", "conf", "solrconfig.xml").toString());
+      testMessage(cc.getCoreInitFailures(), Path.of("badSchema1", "conf", "schema.xml").toString());
+      testMessage(cc.getCoreInitFailures(), Path.of("badSchema2", "conf", "schema.xml").toString());
 
       // Status should report that there are failure messages for the bad cores and none for the
       // good cores.
@@ -676,14 +678,12 @@ public class TestLazyCores extends SolrTestCaseJ4 {
   private void writeCustomConfig(String coreName, String config, String schema, String rand_snip)
       throws IOException {
 
-    File coreRoot = new File(solrHomeDirectory, coreName);
-    File subHome = new File(coreRoot, "conf");
-    if (!coreRoot.exists()) {
-      assertTrue("Failed to make subdirectory ", coreRoot.mkdirs());
-    }
+    Path coreRoot = solrHomeDirectory.resolve(coreName);
+    Path subHome = coreRoot.resolve("conf");
+    Files.createDirectories(subHome);
     // Write the file for core discovery
-    FileUtils.writeStringToFile(
-        new File(coreRoot, "core.properties"),
+    Files.writeString(
+        coreRoot.resolve("core.properties"),
         "name="
             + coreName
             + System.getProperty("line.separator")
@@ -692,15 +692,14 @@ public class TestLazyCores extends SolrTestCaseJ4 {
             + "loadOnStartup=true",
         StandardCharsets.UTF_8);
 
-    FileUtils.writeStringToFile(
-        new File(subHome, "solrconfig.snippet.randomindexconfig.xml"),
+    Files.writeString(
+        subHome.resolve("solrconfig.snippet.randomindexconfig.xml"),
         rand_snip,
         StandardCharsets.UTF_8);
 
-    FileUtils.writeStringToFile(
-        new File(subHome, "solrconfig.xml"), config, StandardCharsets.UTF_8);
+    Files.writeString(subHome.resolve("solrconfig.xml"), config, StandardCharsets.UTF_8);
 
-    FileUtils.writeStringToFile(new File(subHome, "schema.xml"), schema, StandardCharsets.UTF_8);
+    Files.writeString(subHome.resolve("schema.xml"), schema, StandardCharsets.UTF_8);
   }
 
   // Write out the cores' config files, both bad schema files, bad config files and some good
@@ -708,26 +707,25 @@ public class TestLazyCores extends SolrTestCaseJ4 {
   private CoreContainer initGoodAndBad(
       List<String> goodCores, List<String> badSchemaCores, List<String> badConfigCores)
       throws Exception {
-    solrHomeDirectory = createTempDir().toFile();
+    solrHomeDirectory = createTempDir();
 
     // Don't pollute the log with exception traces when they're expected.
     ignoreException(Pattern.quote("SAXParseException"));
 
     // Create the cores that should be fine.
     for (String coreName : goodCores) {
-      File coreRoot = new File(solrHomeDirectory, coreName);
+      Path coreRoot = solrHomeDirectory.resolve(coreName);
       copyMinConf(coreRoot, "name=" + coreName);
     }
 
     // Collect the files that we'll write to the config directories.
     String top = SolrTestCaseJ4.TEST_HOME() + "/collection1/conf";
-    String min_schema =
-        FileUtils.readFileToString(new File(top, "schema-tiny.xml"), StandardCharsets.UTF_8);
+    String min_schema = Files.readString(Path.of(top, "schema-tiny.xml"), StandardCharsets.UTF_8);
     String min_config =
-        FileUtils.readFileToString(new File(top, "solrconfig-minimal.xml"), StandardCharsets.UTF_8);
+        Files.readString(Path.of(top, "solrconfig-minimal.xml"), StandardCharsets.UTF_8);
     String rand_snip =
-        FileUtils.readFileToString(
-            new File(top, "solrconfig.snippet.randomindexconfig.xml"), StandardCharsets.UTF_8);
+        Files.readString(
+            Path.of(top, "solrconfig.snippet.randomindexconfig.xml"), StandardCharsets.UTF_8);
 
     // Now purposely mess up the config files, introducing stupid syntax errors.
     String bad_config = min_config.replace("<requestHandler", "<reqsthalr");
@@ -743,19 +741,20 @@ public class TestLazyCores extends SolrTestCaseJ4 {
       writeCustomConfig(coreName, min_config, bad_schema, rand_snip);
     }
 
-    NodeConfig config = SolrXmlConfig.fromString(solrHomeDirectory.toPath(), "<solr/>");
+    NodeConfig config = SolrXmlConfig.fromString(solrHomeDirectory, "<solr/>");
 
     // OK this should succeed, but at the end we should have recorded a series of errors.
-    return createCoreContainer(config, new CorePropertiesLocator(config.getCoreRootDirectory()));
+    return createCoreContainer(config, new CorePropertiesLocator(config));
   }
 
   // We want to see that the core "heals itself" if an un-corrupted file is written to the
   // directory.
   private void copyGoodConf(String coreName, String srcName, String dstName) throws IOException {
-    File coreRoot = new File(solrHomeDirectory, coreName);
-    File subHome = new File(coreRoot, "conf");
+    Path coreRoot = solrHomeDirectory.resolve(coreName);
+    Path subHome = coreRoot.resolve("conf");
     String top = SolrTestCaseJ4.TEST_HOME() + "/collection1/conf";
-    FileUtils.copyFile(new File(top, srcName), new File(subHome, dstName));
+    Files.copy(
+        Path.of(top, srcName), subHome.resolve(dstName), StandardCopyOption.REPLACE_EXISTING);
   }
 
   // If ok==true, we shouldn't be seeing any failure cases.
@@ -895,10 +894,6 @@ public class TestLazyCores extends SolrTestCaseJ4 {
 
   private LocalSolrQueryRequest makeReq(SolrCore core, String... paramPairs) {
     return new LocalSolrQueryRequest(core, params(paramPairs));
-  }
-
-  private static String makePath(String... args) {
-    return String.join(File.separator, args);
   }
 
   @Test
