@@ -16,10 +16,11 @@
  */
 package org.apache.solr.handler;
 
-import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
-import org.apache.commons.io.FileUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
@@ -29,6 +30,7 @@ import org.apache.solr.cloud.MiniSolrCloudCluster;
 import org.apache.solr.cloud.SolrCloudTestCase;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.NamedList;
+import org.apache.solr.embedded.JettyConfig;
 import org.apache.solr.embedded.JettySolrRunner;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
@@ -41,7 +43,7 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
   protected int REPLICATION_FACTOR = 2;
 
   private final String fileName = this.getClass().getName() + ".server-enabled";
-  private File healthcheckFile = null;
+  private Path healthcheckFile = null;
   private PingRequestHandler handler = null;
 
   @BeforeClass
@@ -52,15 +54,15 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
   @Before
   public void before() throws IOException {
     // by default, use relative file in dataDir
-    healthcheckFile = new File(initAndGetDataDir(), fileName);
+    healthcheckFile = initAndGetDataDir().resolve(fileName);
     String fileNameParam = fileName;
 
     // sometimes randomly use an absolute File path instead
     if (random().nextBoolean()) {
-      fileNameParam = healthcheckFile.getAbsolutePath();
+      fileNameParam = healthcheckFile.toString();
     }
 
-    if (healthcheckFile.exists()) FileUtils.forceDelete(healthcheckFile);
+    if (Files.exists(healthcheckFile)) Files.delete(healthcheckFile);
 
     handler = new PingRequestHandler();
     NamedList<String> initParams = new NamedList<>();
@@ -87,7 +89,7 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
 
   public void testEnablingServer() throws Exception {
 
-    assertFalse(healthcheckFile.exists());
+    assertFalse(Files.exists(healthcheckFile));
 
     // first make sure that ping responds back that the service is disabled
     SolrQueryResponse sqr = makeRequest(handler, req());
@@ -101,8 +103,8 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
 
     makeRequest(handler, req("action", "enable"));
 
-    assertTrue(healthcheckFile.exists());
-    assertNotNull(FileUtils.readFileToString(healthcheckFile, "UTF-8"));
+    assertTrue(Files.exists(healthcheckFile));
+    assertNotNull(Files.readString(healthcheckFile, StandardCharsets.UTF_8));
 
     // now verify that the handler response with success
 
@@ -111,14 +113,14 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
 
     // enable when already enabled shouldn't cause any problems
     makeRequest(handler, req("action", "enable"));
-    assertTrue(healthcheckFile.exists());
+    assertTrue(Files.exists(healthcheckFile));
   }
 
   public void testDisablingServer() throws Exception {
 
-    assertFalse(healthcheckFile.exists());
+    assertFalse(Files.exists(healthcheckFile));
 
-    healthcheckFile.createNewFile();
+    Files.createFile(healthcheckFile);
 
     // first make sure that ping responds back that the service is enabled
 
@@ -129,7 +131,7 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
 
     makeRequest(handler, req("action", "disable"));
 
-    assertFalse(healthcheckFile.exists());
+    assertFalse(Files.exists(healthcheckFile));
 
     // now make sure that ping responds back that the service is disabled
     SolrQueryResponse sqr = makeRequest(handler, req());
@@ -141,7 +143,7 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
 
     // disable when already disabled shouldn't cause any problems
     makeRequest(handler, req("action", "disable"));
-    assertFalse(healthcheckFile.exists());
+    assertFalse(Files.exists(healthcheckFile));
   }
 
   public void testGettingStatus() throws Exception {
@@ -167,7 +169,7 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
   public void testPingInClusterWithNoHealthCheck() throws Exception {
 
     MiniSolrCloudCluster miniCluster =
-        new MiniSolrCloudCluster(NUM_SERVERS, createTempDir(), buildJettyConfig("/solr"));
+        new MiniSolrCloudCluster(NUM_SERVERS, createTempDir(), JettyConfig.builder().build());
 
     final CloudSolrClient cloudSolrClient = miniCluster.getSolrClient();
 
@@ -186,7 +188,7 @@ public class PingRequestHandlerTest extends SolrTestCaseJ4 {
           SolrTestCaseJ4.TEST_PATH().resolve("collection1").resolve("conf"), configName);
       CollectionAdminRequest.createCollection(
               collectionName, configName, NUM_SHARDS, REPLICATION_FACTOR)
-          .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
+          .setPerReplicaState(SolrCloudTestCase.isPRS())
           .process(miniCluster.getSolrClient());
 
       // Send distributed and non-distributed ping query
