@@ -16,20 +16,19 @@
  */
 package org.apache.solr.handler;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Properties;
-import org.apache.commons.io.IOUtils;
+import java.util.concurrent.TimeUnit;
 import org.apache.lucene.index.DirectoryReader;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.search.IndexSearcher;
@@ -42,9 +41,9 @@ import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.SolrJettyTestBase;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrClient;
+import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.embedded.JettyConfig;
 import org.apache.solr.embedded.JettySolrRunner;
-import org.apache.solr.util.FileUtils;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -60,10 +59,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
   ReplicationTestHelper.SolrInstance leader = null;
   SolrClient leaderClient;
 
-  private static final String CONF_DIR =
-      "solr" + File.separator + "collection1" + File.separator + "conf" + File.separator;
-
-  private static String context = "/solr";
+  private static final Path CONF_DIR = Path.of("solr", "collection1", "conf");
 
   boolean addNumberToKeepInRequest = true;
   String backupKeepParamName = ReplicationHandler.NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM;
@@ -72,20 +68,22 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
 
   private static JettySolrRunner createAndStartJetty(ReplicationTestHelper.SolrInstance instance)
       throws Exception {
-    FileUtils.copyFile(
-        new File(SolrTestCaseJ4.TEST_HOME(), "solr.xml"),
-        new File(instance.getHomeDir(), "solr.xml"));
+    Files.copy(
+        SolrTestCaseJ4.TEST_HOME().resolve("solr.xml"), Path.of(instance.getHomeDir(), "solr.xml"));
     Properties nodeProperties = new Properties();
     nodeProperties.setProperty("solr.data.dir", instance.getDataDir());
-    JettyConfig jettyConfig = JettyConfig.builder().setContext("/solr").setPort(0).build();
+    JettyConfig jettyConfig = JettyConfig.builder().setPort(0).build();
     JettySolrRunner jetty = new JettySolrRunner(instance.getHomeDir(), nodeProperties, jettyConfig);
     jetty.start();
     return jetty;
   }
 
   private static SolrClient createNewSolrClient(int port) {
-    final String baseUrl = buildUrl(port, context);
-    return getHttpSolrClient(baseUrl, 15000, 60000);
+    final String baseUrl = buildUrl(port);
+    return new HttpSolrClient.Builder(baseUrl)
+        .withConnectionTimeout(15000, TimeUnit.MILLISECONDS)
+        .withSocketTimeout(60000, TimeUnit.MILLISECONDS)
+        .build();
   }
 
   @Override
@@ -99,11 +97,9 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
       addNumberToKeepInRequest = false;
       backupKeepParamName = ReplicationHandler.NUMBER_BACKUPS_TO_KEEP_INIT_PARAM;
     }
-    leader =
-        new ReplicationTestHelper.SolrInstance(
-            createTempDir("solr-instance").toFile(), "leader", null);
+    leader = new ReplicationTestHelper.SolrInstance(createTempDir("solr-instance"), "leader", null);
     leader.setUp();
-    leader.copyConfigFile(CONF_DIR + configFile, "solrconfig.xml");
+    leader.copyConfigFile(CONF_DIR.resolve(configFile).toString(), "solrconfig.xml");
 
     leaderJetty = createAndStartJetty(leader);
     leaderClient = createNewSolrClient(leaderJetty.getLocalPort());
@@ -139,7 +135,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
 
     final String newBackupDir = backupStatus.waitForDifferentBackupDir(lastBackupDir, 30);
     // Validate
-    verify(Paths.get(leader.getDataDir(), newBackupDir), nDocs);
+    verify(Path.of(leader.getDataDir(), newBackupDir), nDocs);
   }
 
   private void verify(Path backup, int nDocs) throws IOException {
@@ -166,7 +162,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
     int nDocs = BackupRestoreUtils.indexDocs(leaderClient, DEFAULT_TEST_COLLECTION_NAME, docsSeed);
 
     lastBackupDir = backupStatus.waitForDifferentBackupDir(lastBackupDir, 30);
-    snapDir[0] = Paths.get(leader.getDataDir(), lastBackupDir);
+    snapDir[0] = Path.of(leader.getDataDir(), lastBackupDir);
 
     final boolean namedBackup = random().nextBoolean();
 
@@ -189,7 +185,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
         lastBackupDir = backupStatus.waitForBackupSuccess(backupName, 30);
         backupNames[i] = backupName;
       }
-      snapDir[i + 1] = Paths.get(leader.getDataDir(), lastBackupDir);
+      snapDir[i + 1] = Path.of(leader.getDataDir(), lastBackupDir);
       verify(snapDir[i + 1], nDocs);
     }
 
@@ -202,7 +198,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
       final List<String> remainingBackups = new ArrayList<>();
 
       try (DirectoryStream<Path> stream =
-          Files.newDirectoryStream(Paths.get(leader.getDataDir()), "snapshot*")) {
+          Files.newDirectoryStream(Path.of(leader.getDataDir()), "snapshot*")) {
         Iterator<Path> iter = stream.iterator();
         while (iter.hasNext()) {
           remainingBackups.add(iter.next().getFileName().toString());
@@ -235,11 +231,11 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
     }
   }
 
-  private void testDeleteNamedBackup(String backupNames[]) throws Exception {
+  private void testDeleteNamedBackup(String[] backupNames) throws Exception {
     final BackupStatusChecker backupStatus =
         new BackupStatusChecker(leaderClient, "/" + DEFAULT_TEST_CORENAME + "/replication");
     for (int i = 0; i < 2; i++) {
-      final Path p = Paths.get(leader.getDataDir(), "snapshot." + backupNames[i]);
+      final Path p = Path.of(leader.getDataDir(), "snapshot." + backupNames[i]);
       assertTrue("WTF: Backup doesn't exist: " + p, Files.exists(p));
       runBackupCommand(
           leaderJetty, ReplicationHandler.CMD_DELETE_BACKUP, "&name=" + backupNames[i]);
@@ -251,20 +247,16 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
   public static void runBackupCommand(JettySolrRunner leaderJetty, String cmd, String params)
       throws IOException {
     String leaderUrl =
-        buildUrl(leaderJetty.getLocalPort(), context)
+        buildUrl(leaderJetty.getLocalPort())
             + "/"
             + DEFAULT_TEST_CORENAME
             + ReplicationHandler.PATH
             + "?wt=xml&command="
             + cmd
             + params;
-    InputStream stream = null;
-    try {
-      URL url = new URL(leaderUrl);
-      stream = url.openStream();
-      stream.close();
-    } finally {
-      IOUtils.closeQuietly(stream);
+    URL url = URI.create(leaderUrl).toURL();
+    try (InputStream stream = url.openStream()) {
+      assert stream != null;
     }
   }
 }
