@@ -16,24 +16,24 @@
  */
 package org.apache.solr.handler;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Properties;
+import java.util.concurrent.TimeUnit;
 import org.apache.lucene.index.IndexFileNames;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.SolrJettyTestBase;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrClient;
+import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.embedded.JettyConfig;
 import org.apache.solr.embedded.JettySolrRunner;
-import org.apache.solr.util.FileUtils;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -47,20 +47,17 @@ public class TestRestoreCore extends SolrJettyTestBase {
   ReplicationTestHelper.SolrInstance leader = null;
   SolrClient leaderClient;
 
-  private static final String CONF_DIR =
-      "solr" + File.separator + DEFAULT_TEST_CORENAME + File.separator + "conf" + File.separator;
+  private static final Path CONF_DIR = Path.of("solr", DEFAULT_TEST_CORENAME, "conf");
 
-  private static String context = "/solr";
   private static long docsSeed; // see indexDocs()
 
   private static JettySolrRunner createAndStartJetty(ReplicationTestHelper.SolrInstance instance)
       throws Exception {
-    FileUtils.copyFile(
-        new File(SolrTestCaseJ4.TEST_HOME(), "solr.xml"),
-        new File(instance.getHomeDir(), "solr.xml"));
+    Files.copy(
+        SolrTestCaseJ4.TEST_HOME().resolve("solr.xml"), Path.of(instance.getHomeDir(), "solr.xml"));
     Properties nodeProperties = new Properties();
     nodeProperties.setProperty("solr.data.dir", instance.getDataDir());
-    JettyConfig jettyConfig = JettyConfig.builder().setContext("/solr").setPort(0).build();
+    JettyConfig jettyConfig = JettyConfig.builder().setPort(0).build();
     JettySolrRunner jetty = new JettySolrRunner(instance.getHomeDir(), nodeProperties, jettyConfig);
     jetty.start();
     return jetty;
@@ -68,8 +65,11 @@ public class TestRestoreCore extends SolrJettyTestBase {
 
   private static SolrClient createNewSolrClient(int port) {
 
-    final String baseUrl = buildUrl(port, context);
-    return getHttpSolrClient(baseUrl, 15000, 60000);
+    final String baseUrl = buildUrl(port);
+    return new HttpSolrClient.Builder(baseUrl)
+        .withConnectionTimeout(15000, TimeUnit.MILLISECONDS)
+        .withSocketTimeout(60000, TimeUnit.MILLISECONDS)
+        .build();
   }
 
   @Override
@@ -78,11 +78,9 @@ public class TestRestoreCore extends SolrJettyTestBase {
     super.setUp();
     String configFile = "solrconfig-leader.xml";
 
-    leader =
-        new ReplicationTestHelper.SolrInstance(
-            createTempDir("solr-instance").toFile(), "leader", null);
+    leader = new ReplicationTestHelper.SolrInstance(createTempDir("solr-instance"), "leader", null);
     leader.setUp();
-    leader.copyConfigFile(CONF_DIR + configFile, "solrconfig.xml");
+    leader.copyConfigFile(CONF_DIR.resolve(configFile).toString(), "solrconfig.xml");
 
     leaderJetty = createAndStartJetty(leader);
     leaderClient = createNewSolrClient(leaderJetty.getLocalPort());
@@ -124,7 +122,7 @@ public class TestRestoreCore extends SolrJettyTestBase {
           .getCoreContainer()
           .getAllowPaths()
           .add(Path.of(location)); // Allow core to be created outside SOLR_HOME
-      params += "&location=" + URLEncoder.encode(location, "UTF-8");
+      params += "&location=" + URLEncoder.encode(location, StandardCharsets.UTF_8);
     }
 
     // named snapshot vs default snapshot name
@@ -184,7 +182,8 @@ public class TestRestoreCore extends SolrJettyTestBase {
 
   public void testBackupFailsMissingAllowPaths() throws Exception {
     final String params =
-        "&location=" + URLEncoder.encode(createTempDir().toFile().getAbsolutePath(), "UTF-8");
+        "&location="
+            + URLEncoder.encode(createTempDir().toFile().getAbsolutePath(), StandardCharsets.UTF_8);
     Throwable t =
         expectThrows(
             IOException.class,
@@ -203,7 +202,11 @@ public class TestRestoreCore extends SolrJettyTestBase {
     String location = createTempDir().toFile().getAbsolutePath();
     leaderJetty.getCoreContainer().getAllowPaths().add(Path.of(location));
     String snapshotName = TestUtil.randomSimpleString(random(), 1, 5);
-    String params = "&name=" + snapshotName + "&location=" + URLEncoder.encode(location, "UTF-8");
+    String params =
+        "&name="
+            + snapshotName
+            + "&location="
+            + URLEncoder.encode(location, StandardCharsets.UTF_8);
     String baseUrl = leaderJetty.getBaseUrl().toString();
 
     TestReplicationHandlerBackup.runBackupCommand(
@@ -215,7 +218,7 @@ public class TestRestoreCore extends SolrJettyTestBase {
 
     // Remove the segments_n file so that the backup index is corrupted.
     // Restore should fail, and it should automatically roll back to the original index.
-    final Path restoreIndexPath = Paths.get(location, backupDirName);
+    final Path restoreIndexPath = Path.of(location, backupDirName);
     assertTrue("Does not exist: " + restoreIndexPath, Files.exists(restoreIndexPath));
     try (DirectoryStream<Path> stream =
         Files.newDirectoryStream(restoreIndexPath, IndexFileNames.SEGMENTS + "*")) {
