@@ -24,8 +24,8 @@ import static org.apache.solr.response.RawResponseWriter.CONTENT;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.google.common.collect.ImmutableMap;
-import java.io.File;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -33,6 +33,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Stream;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.response.QueryResponse;
@@ -69,9 +70,9 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
   public static void createCluster() throws Exception {
     System.setProperty("managed.schema.mutable", "true");
     configureCluster(1)
-        .addConfig(DEFAULT_CONFIGSET_NAME, new File(ExternalPaths.DEFAULT_CONFIGSET).toPath())
+        .addConfig(DEFAULT_CONFIGSET_NAME, ExternalPaths.DEFAULT_CONFIGSET)
         .configure();
-    // SchemaDesignerAPI depends on the blob store
+    // SchemaDesignerAPI depends on the blob store ".system" collection existing.
     CollectionAdminRequest.createCollection(BLOB_STORE_ID, 1, 1).process(cluster.getSolrClient());
     cluster.waitForActiveCollection(BLOB_STORE_ID, 1, 1);
   }
@@ -133,16 +134,23 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
   @Test
   @SuppressWarnings("unchecked")
   public void testAddTechproductsProgressively() throws Exception {
-    File docsDir = new File(ExternalPaths.SOURCE_HOME, "example/exampledocs");
-    assertTrue(docsDir.getAbsolutePath() + " not found!", docsDir.isDirectory());
-    File[] toAdd =
-        docsDir.listFiles(
-            (dir, name) ->
-                name.endsWith(".xml")
-                    || name.endsWith(".json")
-                    || name.endsWith(".csv")
-                    || name.endsWith(".jsonl"));
-    assertNotNull("No test data files found in " + docsDir.getAbsolutePath(), toAdd);
+    Path docsDir = ExternalPaths.SOURCE_HOME.resolve("example/exampledocs");
+    assertTrue(docsDir + " not found!", Files.isDirectory(docsDir));
+    List<Path> toAdd;
+    try (Stream<Path> files = Files.list(docsDir)) {
+      toAdd =
+          files
+              .filter(
+                  (dir) -> {
+                    String name = dir.getFileName().toString();
+                    return name.endsWith(".xml")
+                        || name.endsWith(".json")
+                        || name.endsWith(".csv")
+                        || name.endsWith(".jsonl");
+                  })
+              .toList();
+      assertNotNull("No test data files found in " + docsDir, toAdd);
+    }
 
     String configSet = "techproducts";
 
@@ -178,7 +186,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     rspData = rsp.getValues().toSolrParams();
     schemaVersion = rspData.getInt(SCHEMA_VERSION_PARAM);
 
-    for (File next : toAdd) {
+    for (Path next : toAdd) {
       // Analyze some sample documents to refine the schema
       reqParams.clear();
       reqParams.set(CONFIG_SET_PARAM, configSet);
@@ -190,7 +198,8 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
 
       // POST some sample JSON docs
       ContentStreamBase.FileStream stream = new ContentStreamBase.FileStream(next);
-      stream.setContentType(TestSampleDocumentsLoader.guessContentTypeFromFilename(next.getName()));
+      stream.setContentType(
+          TestSampleDocumentsLoader.guessContentTypeFromFilename(next.getFileName().toString()));
       when(req.getContentStreams()).thenReturn(Collections.singletonList(stream));
 
       rsp = new SolrQueryResponse();
@@ -240,7 +249,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     schemaDesignerAPI.query(req, rsp);
     assertNotNull(rsp.getResponseHeader());
     SolrDocumentList results = (SolrDocumentList) rsp.getResponse();
-    assertEquals(48, results.getNumFound());
+    assertEquals(47, results.getNumFound());
 
     // publish schema to a config set that can be used by real collections
     reqParams.clear();
@@ -289,10 +298,10 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
 
     ModifiableSolrParams reqParams = new ModifiableSolrParams();
 
-    File filmsDir = new File(ExternalPaths.SOURCE_HOME, "example/films");
-    assertTrue(filmsDir.getAbsolutePath() + " not found!", filmsDir.isDirectory());
-    File filmsXml = new File(filmsDir, "films.xml");
-    assertTrue("example/films/films.xml not found", filmsXml.isFile());
+    Path filmsDir = ExternalPaths.SOURCE_HOME.resolve("example/films");
+    assertTrue(filmsDir + " not found!", Files.isDirectory(filmsDir));
+    Path filmsXml = filmsDir.resolve("films.xml");
+    assertTrue("example/films/films.xml not found", Files.isRegularFile(filmsXml));
 
     reqParams.set(CONFIG_SET_PARAM, configSet);
     reqParams.set(ENABLE_DYNAMIC_FIELDS_PARAM, "true");
@@ -354,7 +363,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     when(req.getParams()).thenReturn(reqParams);
 
     // POST some sample JSON docs
-    File booksJson = new File(ExternalPaths.SOURCE_HOME, "example/exampledocs/books.json");
+    Path booksJson = ExternalPaths.SOURCE_HOME.resolve("example/exampledocs/books.json");
     ContentStreamBase.FileStream stream = new ContentStreamBase.FileStream(booksJson);
     stream.setContentType(JSON_MIME);
     when(req.getContentStreams()).thenReturn(Collections.singletonList(stream));
@@ -741,7 +750,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
 
     String mutableId = getMutableId(configSet);
     SchemaDesignerConfigSetHelper configSetHelper =
-        new SchemaDesignerConfigSetHelper(cc, SchemaDesignerAPI.newSchemaSuggester(cc));
+        new SchemaDesignerConfigSetHelper(cc, SchemaDesignerAPI.newSchemaSuggester());
     ManagedIndexSchema schema = schemaDesignerAPI.loadLatestSchema(mutableId);
 
     // make it required
@@ -840,6 +849,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     SimpleOrderedMap<Object> idFieldMapUpdated = idFieldMap.clone();
     idFieldMapUpdated.setVal(idFieldMapUpdated.indexOf("docValues", 0), Boolean.FALSE);
     idFieldMapUpdated.setVal(idFieldMapUpdated.indexOf("useDocValuesAsStored", 0), Boolean.FALSE);
+    idFieldMapUpdated.setVal(idFieldMapUpdated.indexOf("uninvertible", 0), Boolean.TRUE);
     idFieldMapUpdated.setVal(
         idFieldMapUpdated.indexOf("omitTermFreqAndPositions", 0), Boolean.FALSE);
 
@@ -892,15 +902,24 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     Map<String, Object> mapDiff = (Map<String, Object>) fieldsDiff.get("updated");
     assertEquals(
         Arrays.asList(
-            ImmutableMap.of(
-                "omitTermFreqAndPositions", true, "useDocValuesAsStored", true, "docValues", true),
-            ImmutableMap.of(
+            Map.of(
+                "omitTermFreqAndPositions",
+                true,
+                "useDocValuesAsStored",
+                true,
+                "docValues",
+                true,
+                "uninvertible",
+                false),
+            Map.of(
                 "omitTermFreqAndPositions",
                 false,
                 "useDocValuesAsStored",
                 false,
                 "docValues",
-                false)),
+                false,
+                "uninvertible",
+                true)),
         mapDiff.get("id"));
     assertNotNull(fieldsDiff.get("added"));
     Map<String, Object> fieldsAdded = (Map<String, Object>) fieldsDiff.get("added");
