@@ -22,12 +22,11 @@ import java.io.InputStreamReader;
 import java.net.ServerSocket;
 import java.net.Socket;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import org.apache.commons.io.FileUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.NodeConfig;
@@ -44,7 +43,7 @@ public class SolrGraphiteReporterTest extends SolrTestCaseJ4 {
   @Test
   public void testReporter() throws Exception {
     int jmxReporter = JmxUtil.findFirstMBeanServer() != null ? 1 : 0;
-    Path home = Paths.get(TEST_HOME());
+    Path home = TEST_HOME();
     // define these properties, they are used in solrconfig.xml
     System.setProperty("solr.test.sys.prop1", "propone");
     System.setProperty("solr.test.sys.prop2", "proptwo");
@@ -56,15 +55,14 @@ public class SolrGraphiteReporterTest extends SolrTestCaseJ4 {
       // define the port where MockGraphite is running
       System.setProperty("mock-graphite-port", String.valueOf(mock.port));
       String solrXml =
-          FileUtils.readFileToString(
-              Paths.get(home.toString(), "solr-graphitereporter.xml").toFile(), "UTF-8");
+          Files.readString(home.resolve("solr-graphitereporter.xml"), StandardCharsets.UTF_8);
       NodeConfig cfg = SolrXmlConfig.fromString(home, solrXml);
       CoreContainer cc =
           createCoreContainer(
               cfg,
               new TestHarness.TestCoresLocator(
                   DEFAULT_TEST_CORENAME,
-                  initAndGetDataDir().getAbsolutePath(),
+                  initAndGetDataDir().toString(),
                   "solrconfig.xml",
                   "schema.xml"));
 
@@ -77,7 +75,7 @@ public class SolrGraphiteReporterTest extends SolrTestCaseJ4 {
       assertTrue(reporter instanceof SolrGraphiteReporter);
       Thread.sleep(5000);
       assertTrue(mock.lines.size() >= 3);
-      String[] frozenLines = mock.lines.toArray(new String[mock.lines.size()]);
+      String[] frozenLines = mock.lines.toArray(new String[0]);
       for (String line : frozenLines) {
         assertTrue(line, line.startsWith("test.solr.node.CONTAINER.cores."));
       }
