@@ -19,13 +19,11 @@ package org.apache.solr.cloud.api.collections;
 import static org.apache.solr.common.cloud.ZkStateReader.CORE_NAME_PROP;
 import static org.apache.solr.common.cloud.ZkStateReader.REPLICATION_FACTOR;
 
-import com.google.common.collect.ImmutableList;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.lang.management.ManagementFactory;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -41,14 +39,15 @@ import javax.management.MBeanServer;
 import javax.management.MBeanServerFactory;
 import javax.management.ObjectName;
 import org.apache.lucene.tests.util.TestUtil;
+import org.apache.solr.client.api.model.CoreStatusResponse;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
+import org.apache.solr.client.solrj.SolrRequest.METHOD;
+import org.apache.solr.client.solrj.SolrRequest.SolrRequestType;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.BaseHttpSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.CoreAdminRequest;
-import org.apache.solr.client.solrj.request.CoreStatus;
-import org.apache.solr.client.solrj.request.QueryRequest;
+import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.UpdateRequest;
 import org.apache.solr.client.solrj.response.CollectionAdminResponse;
 import org.apache.solr.client.solrj.response.CoreAdminResponse;
@@ -57,12 +56,10 @@ import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.Slice;
-import org.apache.solr.common.cloud.ZkCoreNodeProps;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.params.CollectionParams.CollectionAction;
 import org.apache.solr.common.params.CoreAdminParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
-import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.TimeSource;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.SolrCore;
@@ -149,7 +146,7 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
             .setCreateNodeSet("")
             .process(cluster.getSolrClient())
             .getStatus());
-    String dataDir = createTempDir().toFile().getAbsolutePath();
+    String dataDir = createTempDir().toString();
     // create a core that simulates something left over from a partially-deleted collection
     assertTrue(
         CollectionAdminRequest.addReplicaToShard(collectionName, "shard1")
@@ -196,8 +193,8 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
     String collectionName = "badactioncollection";
     params.set("name", collectionName);
     params.set("numShards", 2);
-    final QueryRequest request = new QueryRequest(params);
-    request.setPath("/admin/collections");
+    var request =
+        new GenericSolrRequest(METHOD.GET, "/admin/collections", SolrRequestType.ADMIN, params);
 
     expectThrows(
         Exception.class,
@@ -212,8 +209,8 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
     params.set("action", CollectionAction.CREATE.toString());
     params.set("numShards", 2);
     // missing required collection parameter
-    final QueryRequest request = new QueryRequest(params);
-    request.setPath("/admin/collections");
+    var request =
+        new GenericSolrRequest(METHOD.GET, "/admin/collections", SolrRequestType.ADMIN, params);
 
     expectThrows(
         Exception.class,
@@ -231,8 +228,8 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
     params.set(REPLICATION_FACTOR, 10);
     params.set("collection.configName", "conf");
 
-    final QueryRequest request = new QueryRequest(params);
-    request.setPath("/admin/collections");
+    var request =
+        new GenericSolrRequest(METHOD.GET, "/admin/collections", SolrRequestType.ADMIN, params);
 
     expectThrows(
         Exception.class,
@@ -250,8 +247,8 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
     params.set("numShards", 0);
     params.set("collection.configName", "conf");
 
-    final QueryRequest request = new QueryRequest(params);
-    request.setPath("/admin/collections");
+    var request =
+        new GenericSolrRequest(METHOD.GET, "/admin/collections", SolrRequestType.ADMIN, params);
     expectThrows(
         Exception.class,
         () -> {
@@ -291,7 +288,7 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
             .isSuccess());
 
     expectThrows(
-        BaseHttpSolrClient.RemoteSolrException.class,
+        SolrClient.RemoteSolrException.class,
         () -> {
           CollectionAdminRequest.createCollection("halfcollection", "conf", 1, 1)
               .setCreateNodeSet(nn1 + "," + nn2)
@@ -371,8 +368,7 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
     JettySolrRunner jetty1 = cluster.getRandomJetty(random());
     JettySolrRunner jetty2 = cluster.getRandomJetty(random());
 
-    List<String> baseUrls =
-        ImmutableList.of(jetty1.getBaseUrl().toString(), jetty2.getBaseUrl().toString());
+    List<String> baseUrls = List.of(jetty1.getBaseUrl().toString(), jetty2.getBaseUrl().toString());
 
     CollectionAdminRequest.createCollection("nodeset_collection", "conf", 2, 1)
         .setCreateNodeSet(baseUrls.get(0) + "," + baseUrls.get(1))
@@ -527,7 +523,7 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
           "Could not find expected core.properties file",
           Files.exists(instancedir.resolve("core.properties")));
 
-      Path expected = Paths.get(jetty.getSolrHome()).toAbsolutePath().resolve(core.getName());
+      Path expected = Path.of(jetty.getSolrHome()).resolve(core.getName());
 
       assertTrue(
           "Expected: " + expected + "\nFrom core stats: " + instancedir,
@@ -570,13 +566,12 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
     if (collectionState != null) {
       for (Slice shard : collectionState) {
         for (Replica replica : shard) {
-          ZkCoreNodeProps coreProps = new ZkCoreNodeProps(replica);
-          CoreStatus coreStatus;
-          try (SolrClient server = getHttpSolrClient(coreProps.getBaseUrl())) {
-            coreStatus = CoreAdminRequest.getCoreStatus(coreProps.getCoreName(), false, server);
+          CoreStatusResponse.SingleCoreData coreStatus;
+          try (SolrClient server = getHttpSolrClient(replica.getBaseUrl())) {
+            coreStatus = CoreAdminRequest.getCoreStatus(replica.getCoreName(), false, server);
           }
-          long before = coreStatus.getCoreStartTime().getTime();
-          urlToTime.put(coreProps.getCoreUrl(), before);
+          long before = coreStatus.startTime.getTime();
+          urlToTime.put(replica.getCoreUrl(), before);
         }
       }
     } else {
@@ -660,11 +655,12 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
             .process(cluster.getSolrClient());
     newReplica = grabNewReplica(response, getCollectionState(collectionName));
     assertNotNull(newReplica);
+    cluster.waitForActiveCollection(collectionName, 2, 6);
 
     try (SolrClient coreclient = getHttpSolrClient(newReplica.getBaseUrl())) {
       CoreAdminResponse status = CoreAdminRequest.getStatus(newReplica.getStr("core"), coreclient);
-      NamedList<Object> coreStatus = status.getCoreStatus(newReplica.getStr("core"));
-      String instanceDirStr = (String) coreStatus.get("instanceDir");
+      final var coreStatus = status.getCoreStatus(newReplica.getStr("core"));
+      String instanceDirStr = coreStatus.instanceDir;
       assertEquals(instanceDirStr, instancePath.toString());
     }
 
@@ -680,8 +676,9 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
               params.set("collection", collectionName);
               params.set("shard", "shard1");
               params.set("name", coreName);
-              QueryRequest request = new QueryRequest(params);
-              request.setPath("/admin/collections");
+              var request =
+                  new GenericSolrRequest(
+                      METHOD.GET, "/admin/collections", SolrRequestType.ADMIN, params);
               cluster.getSolrClient().request(request);
             });
 
@@ -701,6 +698,7 @@ public abstract class AbstractCollectionsAPIDistributedZkTestBase extends SolrCl
     newReplica = grabNewReplica(response, getCollectionState(collectionName));
     assertEquals(
         "'core' should be 'propertyDotName' ", "propertyDotName", newReplica.getStr("core"));
+    cluster.waitForActiveCollection(collectionName, 2, 7);
   }
 
   private Replica grabNewReplica(CollectionAdminResponse response, DocCollection docCollection) {
